Save/Update files

--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -26,10 +26,10 @@
  languedoc_area:0 "ラングドック"
  languedoc_area_name:0 "ラングドック"
  languedoc_area_adj:1 "ラングドック"
- bourgogne_area:0 "ブルゴーニュ"
+ bourgogne_area:1 "ブルゴーニュ東部"
  bourgogne_area_name:0 "ブルゴーニュ"
  bourgogne_area_adj:0 "ブルゴーニュ"
- massif_central_area:0 "中央高地"
+ massif_central_area:1 "オーヴェルニュ"
  massif_central_area_name:0 "オーヴェルニュ"
  massif_central_area_adj:0 "オーヴェルニュ"
  savoy_dauphine_area:0 "サヴォイ"
@@ -53,7 +53,7 @@
  seine_area:0 "セーヌ"
  seine_area_name:0 "パリ"
  seine_area_adj:0 "パリ"
- loire_area:0 "ロワール"
+ loire_area:1 "ロワール渓谷"
  loire_area_name:0 "アンジュー"
  loire_area_adj:1 "アンジュー"
  wallonia_area:0 "ワロン"
@@ -62,7 +62,7 @@
  flanders_area:0 "フランドル"
  flanders_area_name:0 "フランドル"
  flanders_area_adj:0 "フランドル"
- brabant_area:0 "ブラバント"
+ brabant_area:1 "南ブラバント"
  brabant_area_name:0 "ブラバント"
  brabant_area_adj:0 "ブラバント"
  netherlands_area:0 "低地地方"
@@ -128,10 +128,10 @@
  corsica_sardinia_area:1 "西地中海諸島"
  corsica_sardinia_area_name:0 "サルデーニャ"
  corsica_sardinia_area_adj:0 "サルデーニャ"
- sicily_area:0 "シチリア"
- sicily_area_name:0 "シチリア"
- sicily_area_adj:0 "シチリア"
- naples_area:1 "ラツィオ＝カンパーニャ"
+ sicily_area:1 "シチリア東部"
+ sicily_area_name:1 "東シチリア"
+ sicily_area_adj:1 "東シチリア"
+ naples_area:2 "カンパニア"
  naples_area_name:0 "ナポリ"
  naples_area_adj:0 "ナポリ"
  calabria_area:0 "カラブリア"
@@ -143,9 +143,9 @@
  emilia_romagna_area:0 "エミリア＝ロマーニャ"
  emilia_romagna_area_name:0 "エミリア"
  emilia_romagna_area_adj:0 "エミリア"
- central_italy_area:0 "中央イタリア"
- central_italy_area_name:0 "ローマ"
- central_italy_area_adj:0 "ローマ"
+ central_italy_area:1 "マルケ＝アブルッツォ"
+ central_italy_area_name:1 "マルケ"
+ central_italy_area_adj:1 "マルキジャーノ"
  ireland_area:0 "アイルランド"
  ireland_area_name:0 "アイルランド"
  ireland_area_adj:0 "アイルランド"
@@ -167,9 +167,9 @@
  yorkshire_area:0 "ヨークシャー"
  yorkshire_area_name:0 "ヨーク"
  yorkshire_area_adj:0 "ヨークシャー"
- scottish_marches_area:0 "スコットランド境界地"
- scottish_marches_area_name:0 "境界地"
- scottish_marches_area_adj:0 "境界地"
+ scottish_marches_area:1 "イングランド北部"
+ scottish_marches_area_name:1 "ノーサンブリア"
+ scottish_marches_area_adj:1 "ノーサンブリア"
  home_counties_area:0 "ロンドン"
  home_counties_area_name:0 "アングリア"
  home_counties_area_adj:0 "アングリア"
@@ -233,7 +233,7 @@
  western_norway:0 "ヴェストラン"
  western_norway_name:0 "ベルゲンハス"
  western_norway_adj:0 "ベルゲンハス"
- subarctic_islands_area:1 "フェロー諸島"
+ subarctic_islands_area:2 "北大西洋諸島"
  subarctic_islands_area_name:0 "フェロー諸島"
  subarctic_islands_area_adj:1 "フェロー諸島"
  greenland_area:0 "グリーンランド"
@@ -370,7 +370,7 @@
  erzgebirge_area:0 "エルツ山地"
  erzgebirge_area_name:0 "プルゼニ"
  erzgebirge_area_adj:0 "プルゼニ"
- south_saxony_area:0 "南ザクセン"
+ south_saxony_area:1 "ザクセン"
  south_saxony_area_name:0 "マイセン"
  south_saxony_area_adj:0 "マイセン"
  lower_bavaria_area:0 "ニーダーバイエルン"
@@ -379,16 +379,16 @@
  upper_bavaria_area:0 "オーバーバイエルン"
  upper_bavaria_area_name:0 "バイエルン"
  upper_bavaria_area_adj:0 "バイエルン"
- franconia_area:0 "フランケン"
- franconia_area_name:0 "フランケン"
- franconia_area_adj:0 "フランケン"
- lower_swabia_area:0 "下シュヴァーベン"
+ franconia_area:1 "ウンターフランケン"
+ franconia_area_name:1 "ウンターフランケン"
+ franconia_area_adj:1 "ウンターフランケン"
+ lower_swabia_area:1 "ニーダーシュヴァーベン"
  lower_swabia_area_name:0 "シュヴァーベン"
  lower_swabia_area_adj:0 "シュヴァーベン"
- upper_swabia_area:0 "上シュヴァーベン"
+ upper_swabia_area:1 "オスターシュヴァーベン"
  upper_swabia_area_name:0 "コンスタンツ"
  upper_swabia_area_adj:0 "コンスタンツ"
- northern_saxony_area:0 "北ザクセン"
+ northern_saxony_area:1 "ザクセン＝アンハルト"
  northern_saxony_area_name:0 "アルトマルク"
  northern_saxony_area_adj:0 "アルトマルク"
  thuringia_area:0 "チューリンゲン"
@@ -424,7 +424,7 @@
  romandie_area:0 "ロマンディ"
  romandie_area_name:0 "ロマンディ"
  romandie_area_adj:0 "ロマンディ"
- upper_rhineland_area:0 "上ラインラント"
+ upper_rhineland_area:1 "バーデン"
  upper_rhineland_area_name:0 "バーデン"
  upper_rhineland_area_adj:0 "バーデン"
  palatinate_area:0 "プファルツ"
@@ -439,7 +439,7 @@
  luxemburg_liege_area:0 "リエージュ"
  luxemburg_liege_area_name:0 "リエージュ"
  luxemburg_liege_area_adj:0 "リエージュ"
- westphalia_area:0 "ヴェストファーレン"
+ westphalia_area:1 "ズュートヴェストファーレン"
  westphalia_area_name:0 "ヴェストファーレン"
  westphalia_area_adj:0 "ヴェストファーレン"
  hesse_area:0 "ヘッセ"
@@ -505,7 +505,7 @@
  croatia_area:0 "クロアチア"
  croatia_area_name:0 "クロアチア"
  croatia_area_adj:0 "クロアチア"
- east_adriatic_coast_area:0 "東アドリア海"
+ east_adriatic_coast_area:1 "ダルマチア"
  east_adriatic_coast_area_name:0 "ダルマチア"
  east_adriatic_coast_area_adj:0 "ダルマチア"
  alfold_area:0 "アルフェルド"
@@ -2368,12 +2368,12 @@
  north_america_superregion:0 "北アメリカ"
  north_america_superregion_name:0 "アメリカ"
  north_america_superregion_adj:0 "アメリカ"
- africa_superregion:0 "アフリカ"
- africa_superregion_name:0 "アフリカ"
- africa_superregion_adj:0 "アフリカ"
- south_america_superregion:0 "南アメリカ"
- south_america_superregion_name:0 "コロンビア"
- south_america_superregion_adj:0 "コロンビア"
+ africa_superregion:1 "北アフリカ"
+ africa_superregion_name:1 "サハラ"
+ africa_superregion_adj:1 "サハラ"
+ south_america_superregion:1 "アマゾニア"
+ south_america_superregion_name:1 "アマゾニア"
+ south_america_superregion_adj:1 "アマゾニア"
  central_america_superregion:0 "中央アメリカ"
  central_america_superregion_name:0 "メキシコ"
  central_america_superregion_adj:0 "メキシコ"
@@ -2386,9 +2386,9 @@
  india_superregion:0 "インド"
  india_superregion_name:0 "インド"
  india_superregion_adj:0 "インド"
- near_east_superregion:0 "近東"
- near_east_superregion_name:0 "アナトリア"
- near_east_superregion_adj:0 "アナトリア"
+ near_east_superregion:1 "レヴァント"
+ near_east_superregion_name:1 "レヴァント"
+ near_east_superregion_adj:1 "レヴァント"
  persia_superregion:0 "ペルシア"
  persia_superregion_name:0 "ペルシア"
  persia_superregion_adj:0 "ペルシア"
@@ -2818,3 +2818,9 @@
  mississippi_plain_area_adj:1 "ユーガヘクスパ"
  tannu_uriankhai_area_name:0 "タンヌ・ウリャンカイ"
  tannu_uriankhai_area_adj:0 "タンヌ・ウリャンカイ"
+ southern_africa_superregion:0 "南アフリカ"
+ southern_africa_superregion_name:0 "大コンゴ"
+ southern_africa_superregion_adj:0 "大コンゴ"
+ andes_superregion:0 "アンデス"
+ andes_superregion_name:0 "アンデス"
+ andes_superregion_adj:0 "アンデス"
