--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -135,7 +135,7 @@
  TRANSPORT:0 "輸送船"
  CONVREL_PAPACY:0 "教皇は改宗できません。"
  AND_MONTHLY_THE_FOLLOWING:0 "そして、以下によって毎月$VAL|Y1%$変化します：\n$DESC$"
- PIETY_DESCRIPTION:1 "信仰心は、あなたの統治者が国内で促進する宗教的献身のタイプを表します。それは-100（§Y神秘主義§!）と100（§Y律法主義§!）の間で測定されます。\n統治者の信仰心は、あなたが取ることができる様々な行動によって影響を受けます。イベントの選択肢は、異教徒への宣戦布告（増加）、信仰の兄弟（減少）、または州の改宗の成功（増加）のように、あなたの位置を移動させます。"
+ PIETY_DESCRIPTION:2 "Piety represents the type of religious devotion that your ruler promotes within your nation. It is measured on a scale between -100 (§YMysticism§!) and 100 (§YLegalism§!).\nThe piety of your ruler is affected by various actions you can take. Event options will move your position on the scale as will declaring war on infidels (Increase) or brothers in faith (Decrease)."
  PIETY_DESCRIPTION_ESTATES:1 "\nあなたの統治者の信仰心のタイプは、階級の忠誠心に影響します。"
  KARMA_DESC2:0 "カルマは、仏教信仰においては、あなたの過去の行いの仏性を表し、あなたの行為の道徳性に応じて上下します。あまりにも極端なカルマを持つ君主は世界から孤立してしまいます。カルマが高すぎると一般の兵士から信頼を失い、カルマが少なすぎると外交の場では無力になってしまいます。カルマを持つ国々は、和平交渉で中核州を返還し、国と属国を解放する際、外交力を消費しません。"
  KARMA_DESC:0 "以下でカルマが増加する：\n－§Y栄誉ある同盟§!\n－§Y属国を解放する§!\n－§Y和平交渉で国家を解放する§!\n－§Y中核州を返還する§!\n－§Y州を改宗する§!\n\n以下でカルマが減少する：\n－§Y宣戦布告する§!\n－§Y和平交渉で州を奪う§!"
@@ -291,11 +291,11 @@
  INSTI_NOT_ACTIVE:0 "$NAME|Y$はまだ発見されていません。"
  INSTI_PRIMITIVE_CANNOT_EMBRACE_RELIGION:0 "原始国家は、制度を受容する前に宗教を変更しなければなりません。"
  INSTI_PRIMITIVE_CANNOT_EMBRACE_GOVERNMENT:0 "原始国家は、制度を受容する前に政府を変更しなければなりません。"
- INSTI_TOO_EXPENSIVE:0 "私たちが $NAME|Y$を受容するためには$COST|Y$¤のコストがかかるが、私たちは $CASH|Y$¤しかもっていないので、その余裕はない。"
+ INSTI_TOO_EXPENSIVE:1 "We cannot afford to embrace $NAME|Y$ as it would cost $COST|Y$¤ and we only have $CASH|Y$¤"
  INSTI_NOT_ENOUGH_HOLD:0 "$NAME|Y$の制度は、受容するのに十分なほど我が国に広まっていません。受容するには、自治率による補正後の総開発値の$NEED|Y$％以上が必要ですが、受容しているのは$CURR|Y$％だけです。"
  EMBRACE_INSTI_COST:0 "$NAME|Y$を受容するには$COST|Y$¤のコストがかかり、技術コストが$TECH$変更されます。"
  MANAGE_OVEREXTENSION:0 "過剰拡大を管理する"
- EMPEROR_DIPACTIONS_DESC:0 "皇帝は次のような外交的行動をとることができます：\n$LIST|Y$"
+ EMPEROR_DIPACTIONS_DESC:0 "\nThe Emperor may take the following diplomatic actions: \n$LIST|Y$"
  PAPAL_CONTROLLER_DIPACTIONS_DESC:0 "教皇の支配者は次のような外交的行動をとることができます：\n$LIST|Y$"
  PAPACY_NEXT_CARDINALS:0 "§Y枢機卿候補§W"
  UNIT_UNLOCKED_AT_TECH:0 "「$UNIT|Y$」は$TECH$（$LEVEL$）で解禁されます。"
@@ -418,8 +418,8 @@
  PERSONALITYOF:0 "§Y個性：§!"
  GOVERNMENT_RANK_LESS_THAN:0 "政府ランクが右記未満である："
  GOVERNMENT_RANK_GREATER_THAN:0 "政府ランクが右記以上である："
- BORDER_DISTANCE_LESS_THAN:0 "国境間の距離が右記未満である："
- BORDER_DISTANCE_AT_LEAST:0 "国境間の距離が右記以上である："
+ BORDER_DISTANCE_LESS_THAN:1 "Distance between borders with $COUNTRY|Y$ is less than"
+ BORDER_DISTANCE_AT_LEAST:1 "Distance between borders with $COUNTRY|Y$ is at least"
  DIPLOMATIC_DISTANCE_LESS_THAN:0 "首都間の距離が右記未満である："
  DIPLOMATIC_DISTANCE_AT_LEAST:0 "首都間の距離が右記以上である："
  PROVINCE_DISTANCE_LESS_THAN:0 "$FROM|Y$から$TO|Y$までの距離が$VALUE|Y$未満である。"
@@ -444,16 +444,16 @@
  TRUST_AT_LEAST:0 "信頼が右記以上である："
  NAVY_NONE:0 "海軍無し"
  ARMY_NONE:0 "陸軍無し"
- ARMY_BALANCE_LESS_THAN:0 "相対的な陸軍のサイズ比が右記未満である："
- ARMY_BALANCE_AT_LEAST:0 "相対的な陸軍のサイズ比が右記以上である："
- NAVY_BALANCE_LESS_THAN:0 "相対的な海軍のサイズ比が右記未満である："
- NAVY_BALANCE_AT_LEAST:0 "相対的な海軍のサイズ比が右記以上である："
- MILITARY_STRENGTH_LESS_THAN:0 "相対的な軍事力の比率が右記未満である："
- MILITARY_STRENGTH_AT_LEAST:0 "相対的な軍事力の比率が右記以上である："
- ARMY_STRENGTH_LESS_THAN:0 "相対的な陸軍力の比率が右記未満である："
- ARMY_STRENGTH_AT_LEAST:0 "相対的な陸軍力の比率が右記以上である："
- NAVY_STRENGTH_LESS_THAN:0 "相対的な海軍力の比率が右記未満である："
- NAVY_STRENGTH_AT_LEAST:0 "相対的な海軍力の比率が右記以上である："
+ ARMY_BALANCE_LESS_THAN:1 "Relative army size ratio compared to $COUNTRY|Y$ is less than"
+ ARMY_BALANCE_AT_LEAST:1 "Relative army size ratio compared to $COUNTRY|Y$ is at least"
+ NAVY_BALANCE_LESS_THAN:1 "Relative navy size ratio compared to $COUNTRY|Y$ is less than"
+ NAVY_BALANCE_AT_LEAST:1 "Relative navy size ratio compared to $COUNTRY|Y$ is at least"
+ MILITARY_STRENGTH_LESS_THAN:1 "Relative military strength ratio compared to $COUNTRY|Y$ is less than"
+ MILITARY_STRENGTH_AT_LEAST:1 "Relative military strength ratio compared to $COUNTRY|Y$ is at least"
+ ARMY_STRENGTH_LESS_THAN:1 "Relative army strength ratio compared to $COUNTRY|Y$ is less than"
+ ARMY_STRENGTH_AT_LEAST:1 "Relative army strength ratio compared to $COUNTRY|Y$ is at least"
+ NAVY_STRENGTH_LESS_THAN:1 "Relative naval strength ratio compared to $COUNTRY|Y$ is less than"
+ NAVY_STRENGTH_AT_LEAST:1 "Relative naval strength ratio compared to $COUNTRY|Y$ is at least"
  AI_PERSONALITY_CHANGE:0 "個性が§Y$PER$§Wに変更されます。\n"
  AI_ATTITUDE_CHANGE:0 "§Y$COUNTRY$§!への態度が§Y$ATT$§Wに変更されます。\n"
  IS_ON_CONTINENT:0 "存在する"
@@ -913,3 +913,21 @@
  CHAT_ERROR_MUTE_MISSINGARGS:0 "無効な構文です、予想：/mute <username>"
  CHAT_ERROR_UNMUTE_MISSINGARGS:0 "無効な構文です、予想：/unmute <username>"
  CHAT_ERROR_MUTEUNMUTE_SELF:0 "自分自身をmuteまたはunmuteすることはできません！"
+ NAVY_COMBAT_TOOLTIP_DISENGAGED:0 "§YThis ship has disengaged and will rejoin the fleet once the battle is over.§!"
+ NAVY_COMBAT_TOOLTIP_DEMORALIZED:0 "§YThis ship is demoralized and will only try to disengage for now.§!"
+ UNIT_VIEW_CHOOSE_LEADER_MERCENARY_COMPANY:0 "This is a mercenary company, and they decide on their own leader."
+ MAPMODE_SUPER_REGION_DESC:0 "Colors the provinces according to which subcontinent they belong to. Hovering over any province will reveal which area, region, subcontinent and continent it belongs to."
+ PLAYER_AI_PREFS_OPTION_TITLE_manage_estates:0 "Manage Estates"
+ PLAYER_AI_PREFS_OPTION_DESC_manage_estates:0 "Controls whether the AI may take any actions to manage your Estates"
+ ACHIEVEMENTS_DISABLED_ENDGAME_TAGS_BLOCKED:0 "§Y- 'Limited Country Forming' Option must be set to 'Yes'.§!"
+ SETTINGS_ACCESSIBILITY:0 "Accessibility"
+ SETTINGS_ACCESSIBILITY_TTS:0 "Multiplayer Chat Text To Speech"
+ SETTINGS_ACCESSIBILITY_STT:0 "Multiplayer Chat Speech To Text"
+ SETTINGS_ACCESSIBILITY_VISUAL_ALERTS:0 "Multiplayer Chat Visual Alerts"
+ SETTINGS_ACCESSIBILITY_USE_STT_SHORTCUT:0 "Speech To Text Toggle Shortcut"
+ SETTINGS_ACCESSIBILITY_CHAT_LARGE_FONTS:0 "Multiplayer Chat Large Fonts"
+ SETTINGS_ACCESSIBILITY_STT_SHORTCUT_INPUT:0 "Multiplayer Chat Speech To Text Shortcut"
+ CHAT_CVAA_MESSAGE:0 "$NAME$ says $MESSAGE$"
+ CHAT_CVAA_SYSTEM_NAME:0 "System"
+ CHAT_CVAA_EMPTY_TEXT:0 " "
+ CHAT_CVAA_MIC:0 "Mic"
