--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -77,7 +77,7 @@
  jain_temples_tooltip:1 "§Y10§!年間、§Yジャイナ教徒§!が支配するランダムな州が、州の開発コスト§G-10%§!を獲得する。\nジャイナ教徒が支配する州が基本税§G1§!を獲得する。"
  jain_temples_tooltip_2:0 "§Y10§!年間、§Yジャイナ教徒§!が支配するランダムな州が、税収§G+1§!を獲得する。\nジャイナ教徒が支配する州が基本税§G1§!を獲得する。"
  SEEK_SUPPORT_OF_BRAHMINS:0 "バラモンの賛同を求める"
- EXEMPT_FROM_JIZYA:0 "ジズヤの免除"
+ EXEMPT_FROM_JIZYA:1 "Exempt From Jizya"
  EST_VAL_BRAHMIN_LEGITIMACY:0 "正統性を求める: §Y$VAL$%§!"
  muslim_brahmin_legitimacy:0 "バラモンにより正統化される"
  desc_muslim_brahmin_legitimacy:0 "我々はバラモン階級の人々の賛同を得ており、ヒンドゥー教徒の臣民たちは今や我々の支配をより正当なものと考えている。"
@@ -148,7 +148,7 @@
  brahmins_estate_events.9.d:0 "バラモンは伝統的にヒンドゥー教の宗教上の権威を独占してきたが、時折、バラモン主義に挑む宗教運動が現れる。この種の運動が、バラモンによる抑圧の努力にもかかわらず、[Root.Country.GetName]中に広まっている。大衆宗教運動の主唱者達は、バラモンは自分の額から聖痕を拭い去って宗教的責任を逃れてきた、それは世俗権力の座を占領し、貧民に不公平を押し付けるためだと主張している。無欲の献身だけが救いへの唯一の道であり、十分に熱心なヒンドゥー教徒ならば誰でも達成できる美徳であると彼らは断言している。\n\n影響力のあるバラモンの集団は、バラモンの権威に対する国民の信頼を回復し、非バラモン宗教運動を抑圧する助けを嘆願するため、[Root.Monarch.GetTitle]に接近している。"
  brahmins_estate_events.9.a:0 "バラモンに正統性の強制を許可する。"
  brahmins_estate_events.9.b:0 "大衆宗教運動を推奨する。"
- non_brahmin_tooltip:0 "§Yバラモン§!が所有している州は全て、§Y15年§!間§Yバラモンの正統性の強制§!を獲得し、以下の効果を与えられます：\n地方不穏度：§R+5.00§!\n月毎の自治率の変動：§G-0.05%§!"
+ non_brahmin_tooltip:1 "A fraction of all owned §YHindu§! provinces, roughly equal to the land share of the §YBrahmins§! estate, get §Y'Brahmin Orthodoxy Enforced'§! for §Y15 years§!, giving the following effects:\nLocal Unrest: §R+5.00§!\nMonthly Autonomy Change: §G-0.05%§!"
  brahmins_estate_events.10.t:0 "[brahmin_fort_province.GetName]の要塞で紛争"
  brahmins_estate_events.10.d:0 "[Root.Country.GetName]の王室は、[Root.Monarch.GetTitle]と軍事階級間の紛争に巻き込まれました。緊張が高まっている今、要塞管理の問題が注目されるようになりました。現在、特に争いを好む将軍によって保有される[brahmin_fort_province.GetName]の要塞は、バラモンが自らの影響力を得ている州にあります。\n\n緊張のために突然戦争が勃発する可能性を予見して、この重要な要塞の支配権を争いを好む将軍からバラモンに移すことは賢明かもしれません。攻城技術に関しては軍人より下手ですが、少なくともバラモンは[Root.Monarch.GetTitle]に忠実です。また代案としては、[brahmin_fort_province.GetName]での将軍の特権の保持と引き換えに態度を変えるよう彼を説得することができます。"
  brahmins_estate_events.10.a:0 "バラモンに要塞を渡せ。"
@@ -228,7 +228,7 @@
  rajputs_estate_events.4.a:0 "我々を親族と思うだろう。"
  rajputs_estate_events.4.b:0 "彼らとの友好は必要ない。"
  rajputs_estate_events.5.t:0 "ラージプートの御曹子が新たな領土を求める"
- rajputs_estate_events.5.d:0 "インドにおけるラージプートの力は、何世紀にもわたる征服や植民地化、移住に基づくもので、ラージャスターンの勢力基盤を越えています。特に大胆かつ野心的な名門の末裔は、親族の威信を高めることを狙って王室に現れました。[Root.Monarch.GetTitle]に近づくと、彼は新都市を創設するため、[rajput_scion_province.GetName]に定住する許可を求めました。引き換えに、彼は[Root.Country.GetName]国の支配を受け入れ、必要な時にはいつでも軍隊を招集して支援することを約束しています。"
+ rajputs_estate_events.5.d:1 "Rajput power in India is predicated on centuries of conquest, colonization, and settlement of lands beyond their power base in Rajasthan. A particularly bold and ambitious scion of a notable clan has appeared at court on a quest to enhance the prestige of his kin. Approaching the [Root.Monarch.GetTitle], he asks permission to settle [rajput_scion_province.GetName], where he shall found a new town. He promises in exchange to accept the rule of the [Root.Country.GetAdjective] state and to raise an army in our support whenever it is needed."
  rajputs_estate_events.5.a:0 "その州を引き渡し、新しい居住地区の創設を許可せよ。"
  rajputs_estate_events.5.b:0 "これらの土地は我々自身で完全に上手く管理することができる。"
  rajputs_estate_events.6.t:0 "ラージプートの要求"
@@ -276,7 +276,7 @@
  EST_VAL_JAINS_ADVANCE:0 "ジャイナ教共同体の伸長: §Y$VAL$%§!"
  EST_VAL_JAINS_DECLINE:0 "ジャイナ教共同体の衰退: §Y$VAL$%§!"
  jains_estate_events.2.t:0 "ジャイナ教の影響力の拡大"
- jains_estate_events.2.d:0 "多くの有力なジャイナ教徒は、[Root.Country.GetName]の宮廷に所在を見つけました。ジャイナ教徒の行者や銀行家、商人は、同じ様に[Root.Monarch.GetTitle]に話を聞いてもらえます。ジャイナ教の儀式に[Root.Monarch.GetName]自身が参加したという噂すらあります。小さな宗教の少数派ではありますが、ジャイナ教徒は政治と社会において権力を獲得しています。"
+ jains_estate_events.2.d:0 "Many influential Jains have found a home in the court of [Root.Country.GetName]. Jain ascetics, bankers, and merchants alike have the ear of the [Root.Monarch.GetTitle]. There are even rumors that [Root.Monarch.GetName] [Root.Monarch.GetHerselfHimself] has joined in Jain rituals. Though a small religious minority, the Jains are gaining power in politics and society."
  jains_estate_events.3.t:0 "ジャイナ教の影響力の衰退"
  jains_estate_events.3.d:0 "ジャイナ教徒は自身に社会資本が欠けていることに再度気づきました。著名な行者は、一連の宗教的かつ政治的な相違に従って、宮廷から追放されることをどうにか回避しており、ジャイナ教徒の商人は運命が衰えていると感じています。ジャイナ教徒の影響力は低下しています。"
  jains_estate_events.4.t:0 "ジャイナ教徒の迫害への抵抗"
@@ -339,7 +339,7 @@
  marathas_estate_events.4.a:0 "国家が馬を提供しよう。"
  marathas_estate_events.4.b:0 "高すぎる。彼等が自分の馬を買わねばならん。"
  marathas_estate_events.5.t:0 "マラーター社会の軍事化"
- marathas_estate_events.5.d:0 "マラーターは、彼らが支配する土地への軍事文化の強化をもたらします。彼らは、農民層や下層階級と緊密な関係を保ち、貴族の本質的価値を信じる平等主義の見通しを支持しています。通常、貴族階級から人的資源を引き出す多くのインドの軍隊とは異なり、マラーターはゲリラ戦に長けた農兵の部隊を招集します。高貴で有名な家柄の優越性に恵まれていませんが、彼らの軍事経験は、敵の容易く弱々しい軍隊よりも優れたものにします。"
+ marathas_estate_events.5.d:0 "The Marathas bring with them a hardened martial culture to the lands they rule. They maintain close ties with the peasantry and lower castes, favoring an egalitarian outlook over a belief in the inherent worth of nobility. Unlike many Indian armies, which typically draw their manpower from the ranks of the nobility, the Marathas raise legions of peasant-soldiers skilled in guerrilla warfare. Though not endowed with the excellence of noble and illustrious birth, their martial experience makes them superior to the easy and effeminate troops of our enemies."
  marathas_estate_events.5.a:0 "陸軍のためのより多くの人材"
  EST_VAL_MARATHA_MILITARIZATION:0 "軍事社会: §Y$VAL$%§!"
  marathas_estate_events.6.t:0 "軍事化による穀物不足の発生"
@@ -358,7 +358,7 @@
  marathas_estate_events.8.d:0 "ビトーバー崇拝を中心とする巡礼の伝統は、マラーターの間で人気が高まっています。これらの行列は、インドの多くのマラーター居留地で幅広く同時に行われ、パンダルプールのビトーバーの寺院で最高潮に至る、パルキーとして知られています。パルキーはマラーターの平等主義の伝統の一部を形成しています。階級にかかわらず全てのマラーターは、崇拝されたサント・マット、詩人の聖人の質素なサンダルを持って、並んで歩きます。\n\nバラモンの中には、これらの非階層的な宗教運動が宗教的権威に対する脅威であると見なす者もます。彼らはヴェーダの儀式の解釈に従って正統なヒンドゥー教の礼拝に統合できるように、パルキーを管理する手段を得ようとしています。"
  marathas_estate_events.8.a:0 "パルキーは民衆の手中にあるままとしよう。"
  marathas_estate_events.8.b:0 "バラモンの指針で祭典を正式なものとせよ。"
- palkis.tooltip:0 "§Yマラーター§!階級が保有する、もしくは§Yマラーター§!文化である領有している州は全て、§Y20年間§!§Y大衆のパルキー§!を獲得し、以下の効果を与えられます：\n州内不穏度：§G-3.00§!\n州内開発コスト：§G-5.0%§!\n月間荒廃度：§G-0.03§!"
+ palkis.tooltip:1 "A fraction of all owned §YHindu§! provinces, roughly equal to the land share of the §YMaratha§! estate, get §Y'Popular Palkhis'§! for §Y20 years§!, giving the following effects:\nLocal Unrest: §G-3.00§!\nLocal Development Cost: §G-5.0%§!\nMonthly Devastation: §G-0.03§!"
  EST_VAL_BRAHMIN_PALKHIS:0 "バラモン主導のパルキー: §Y$VAL$％§!"
  marathas_estate_events.9.t:0 "マラーターの権力の減少"
  marathas_estate_events.9.d:0 "最近、[Root.Country.GetName]内でのマラーターの影響は薄れています。王朝の内紛と分裂は、多くのマラーターの指導者から[Root.Monarch.GetTitle]に対する義務を遠ざけ、従って、彼らは王室でほとんど権力を振るっていません。"
@@ -403,12 +403,11 @@
  ENACT_REFORM_NOT_ENOUGH_PROGRESS:0 "§R十分な政府改革進捗度がありません。§!"
  ENACT_PREVIOUS_LEVEL_BEFORE:0 "§Rこの改革を制定する前に、前列を制定する必要があります。§!"
  VACANT_REFORM_DESC:0 "この政府改革はコストなしで選択でき、以下のボーナスが得られます：\n$BENEFITS$"
- CHANGE_REFORM_DESC:1 "政府改革$REFORM|Y$に変更すると、汚職が$COST|R$増加し、以下のボーナスが得られます：\n$BENEFITS$"
+ CHANGE_REFORM_DESC:3 "Changing to the Government Reform $REFORM|Y$ will remove $COST|R$ Government Reform Progress and give you the following benefits:\n$BENEFITS$"
  CHANGE_REFORM_POTENTIAL:1 "\nこの改革は、あなたが以下の条件を満たしているだけに限って、利用可能なことに注意して下さい。\n$CONDITIONS$"
  NO_MANUAL_CHANGE:0 "この改革を手動で選択することはできません。"
- CHANGE_REFORM_CONFIRM_DESC:1 "政府改革$REFORM|Y$に変更してもよろしいですか？ 変更により汚職が$COST|R$増加し、以下のボーナスが得られます：\n$BENEFITS$$POTENTIAL$"
+ CHANGE_REFORM_CONFIRM_DESC:2 "Are you sure you want to change to the Government Reform $REFORM|Y$? This will cost $COST|R$ Government Reform Progress and give you the following benefits:\n$BENEFITS$$POTENTIAL$"
  VACANT_REFORM_CONFIRM_DESC:0 "政府改革$REFORM|Y$を選択してもよろしいですか？ この選択はコスト不要で、以下のボーナスが得られます：\n$BENEFITS$"
- CHANGE_REFORM_TOO_MUCH_CORR:0 "汚職が$MAXCORR|R$を超えている場合は政府改革を変更できません。"
  N_REFORM_UPGRADES_AVAILABLE:0 "制定可能な改革：$UPGRADES|Y$"
  NO_REFORMS_FOR_NATIVES:1 "§R政府改革を制定する前にネイティブ・アメリカン政体を脱却しなければなりません。§!"
  NO_REFORMS_RELIGION:0 "§R政府改革を制定する前に宗教を改革しなければなりません。§!"
@@ -417,11 +416,11 @@
  REFORM_REPLACE_FOR_FREE_DESC:0 "どれか1つを自由に選んでください。"
  REFORM_WONT_BE_ABLE_TO_SWITCH_OUT:2 "§R取消不可の改革。この改革を選択すると、同じレベルの他の改革に変更することはできなくなります。§!\n"
  REFORM_LEVEL_LOCKED:0 "ロックされています"
- REFORM_LEVEL_LOCKED_DESC:0 "いずれも選択できません。"
+ REFORM_LEVEL_LOCKED_DESC:1 "You cannot select any of these."
  REFORM_LEVEL_NEEDS_PREVIOUS_DESC:0 "これらを選択する前に、前列を制定する必要があります。"
  CURRENT_REFORM_PROGRESS:0 "$POINTS$の政府改革進捗度を保有しています。次の改革を制定するには$REQPOINTS|Y$必要です。"
  NEXT_REFORM_EXPECTED:0 "そこに到達するのは$WHEN|Y$と予測されます。"
- REFORM_PROGRESS_MODIFIER_DESC:1 "平均自治率§Y$LOCALAUTONOMY$%§!から毎月$POINTS|Y$の政府改革進捗度を獲得しています。自治率が低いほど政府改革進捗度は速く貯まります。現在、最大で$POINTS_CAP|Y$まで保持することができます。"
+ REFORM_PROGRESS_MODIFIER_DESC:2 "You gain $POINTS|Y$ every mont due to:$FROM_AUTONOMY$$FROM_BUILDINGS$\n\nThe lower the local autonomy is the faster you will gain reform points."
  REFORM_INCREASED_COST:1 "改革のレベルが上がるごとに§Y50§!ずつコストが上昇します。"
  YELLOW_TEXT:0 "$NAME|Y$"
  GREEN_TEXT:0 "$NAME|G$"
@@ -494,8 +493,8 @@
  POSSIBLE_POLICY_BASE:1 "基本：$VALUE|Y$\n"
  USED_POLICIES_TOOLTIP:0 "$USED$個 / $MAX|Y$個の有効な$ABILITY$政策スロットがあります。"
  USED_POLICIES_TOOLTIP_DESC:0 "$FREE|G$個の無料$ABILITY$政策スロットがあるおかげで、毎月の維持コストとして $COST|Y$ $POWERICON$ 点が必要です。"
- INVESTMENTS_IN_COMPANY_REGION_LESS_THAN:0 "$TAG|Y$は、$REGION|Y$内の交易会社投資の$INVESTMENT|Y$を$VAL|Y$以上有していない。"
- INVESTMENTS_IN_COMPANY_REGION_AT_LEAST:0 "$TAG|Y$は、$REGION|Y$内の交易会社への投資の$INVESTMENT|Y$を$VAL|Y$以上有している。"
+ INVESTMENTS_IN_COMPANY_REGION_LESS_THAN:1 "$TAG|Y$ has less than $VAL|Y$ $INVESTMENT|Y$ in $REGION|Y$.\n"
+ INVESTMENTS_IN_COMPANY_REGION_AT_LEAST:1 "$TAG|Y$ has at least $VAL|Y$ $INVESTMENT|Y$ in $REGION|Y$.\n"
  local_venture:0 "地方ベンチャー"
  local_quarter:0 "局地的防郭"
  local_quarter_desc:0 "交易会社の者達は、攻囲の場合に容易に供給できる防御線を確立した。\n"
@@ -548,7 +547,7 @@
  desc_severe_monsoon:0 "暴風と豪雨により、この州を移動するのは非常に困難である。"
  CHARTER_COMPANY:0 "勅許会社"
  CHARTER_COMPANYTITLE:0 "勅許会社"
- CHARTER_COMPANY_DESC:2 "交易会社となる州の売却を国家に求める。"
+ CHARTER_COMPANY_DESC:3 "Ask the country to sell a province that will become a Trade Company.\nThe Base-Price for a Charter Company of $COST|Y$¤ is due to:\n$WHY$"
  CHARTER_COMPANY_NO_AT_WAR:0 "戦争時に勅許会社を求めることはできません"
  CHARTER_COMPANY_NOT_ENOUGH_CASH:0 "勅許会社を求めるには最低$PRICE$¤必要で、あなたは$OWNED$¤しか持っていません"
  CHARTER_COMPANY_UNDISCOVERED_PROVINCE:0 "まだ発見していない州に勅許会社を求めることはできません。"
@@ -693,7 +692,7 @@
  CONFIRM_SETTLEMENT_GROWTH_DESC:0 "本当に植民者を$PROV|Y$に送り、移民成長を促進しますか？"
  CONFIRM_CANCEL_SETTLEMENT_GROWTH:0 "移民成長取り消しの確認"
  CONFIRM_CANCEL_SETTLEMENT_GROWTH_DESC:0 "本当に$PROV|Y$における移民成長の促進を停止しますか？"
- LOCKED_REFORM:0 "これは特別な政府改革です。このレベルの他の改革に変更することはできません。"
+ LOCKED_REFORM:1 "This is a special Government Reform. You cannot switch to another Reform on this level."
  investment_events.1.t:0 "セポイ"
  investment_events.1.d:0 "[sepoy_province.TradeCompany.GetName]は、軍事経験のある頑強な男を常に雇っている。しかしながら、[Root.Capital.GetName]から募兵する兵站は達成が難しいかもしれない。交易会社の将校は、交易会社の兵を支援するためのより費用対効果の高い方法は、現地インドの民衆からより広く雇用することだろうと提案している。これら「セポイ」連隊は、主にバラモンやラージプートのクシャトリヤといった、インド社会の上位カーストから徴用されたもので、従って、戦争の方法によく精通している。最近のインドでは見かけることが難しい誠実で公正な支払いをすると評判なため、多くのセポイは喜んで交易会社に仕えている。\n\n[Root.GetAdjective]兵のより均一化された軍隊を命令するのはより容易かもしれないが、亜大陸で利用できる膨大な人的資源を無視すべきではない。"
  investment_events.1.a:0 "新たなセポイ連隊の設立する。"
@@ -741,7 +740,7 @@
  HAS_NOT_GOVERNMENT_ATTRIBUTE:0 "$REFORM|Y$は$ATTRIBUTE|Y$の機構を持ち合わせていません"
  HAS_GOVERNMENT_ATTRIBUTE_SHORT_DESC:0 "$REFORM|Y$: $ATTRIBUTE|Y$"
  HAS_NOT_GOVERNMENT_ATTRIBUTE_SHORT_DESC:0 "$REFORM|Y$: $ATTRIBUTE|Y$"
- CANNOT_UPGRADE_RANK_DISALLOWED_BY_REFORMS:0 "あなたの政府改革のせいで次のランクへアップグレードできません。"
+ CANNOT_UPGRADE_RANK_DISALLOWED_BY_REFORMS:0 "Your Government Reforms prevent an upgrade to the next rank."
  monsoon_events.1.t:0 "[severe_monsoon_province.GetAreaName]の深刻な雨季"
  monsoon_events.1.d:1 "[GetYear]年の雨季は[severe_monsoon_province.GetAreaName]で予想されていたより遥かに深刻だった。強風と豪雨は農村と都市に等しく甚大な被害を与えた。被害の一部を復旧するための救援活動には多大な費用を要する上、[severe_monsoon_province.GetAreaName]が完全に復興するには時間がかかるだろう。"
  monsoon_events.1.a:0 "救援活動を組織せよ。"
@@ -756,7 +755,7 @@
  monsoon_events.4.a:0 "民より富だ。"
  monsoon_events.5.t:0 "梅雨"
  monsoon_events.5.d:0 "梅の花\n恵みの雨に\n鍬軽し"
- plum_rain_tooltip:0 "§Y[plum_rains_province.GetAreaName]§!地域の§Y穀物§!、§Yワイン§!、§Y茶§!、§Y香辛料§!を生産する州は§Y5年§!の間§Y梅雨§!を獲得し、次のボーナスを得ます：\n州生産効率：§G+20.0%§!"
+ plum_rain_tooltip:0 "Provinces in the §Y[plum_rains_province.GetAreaName]§! Area producing §YGrain§!, §YWine§!, §YTea§!, or §YSpices§! get §Y'Plum Rain'§! for §Y5 years§!, giving the following effects:\nLocal Production Efficiency: §G+20.0%§!"
  HAVE_HAD_REFORM:1 "改革$REFORM|Y$を得ました\n"
  HAVE_HAD_NOT_REFORM:1 "改革$REFORM|Y$を得ませんでした\n"
  mechanic_locked_government_type_yes:0 "政体の変更が禁止されている"
@@ -861,12 +860,6 @@
  GOVERNMENT_REFORM_ESTATE_INFLUENCE_EFFECT:0 "$NAME$影響力：$VAL$"
  PREVIOUS_SCORNFUL_INSULT_NO_INSULTS:0 "言い返す侮辱を編み出していない。"
  NATIVE:0 "原住民"
- territory_very_easy_difficulty:0 "テリトリーが多すぎます"
- territory_easy_difficulty:0 "テリトリーが多すぎます"
- territory_normal_difficulty:0 "テリトリーが多すぎます"
- territory_hard_difficulty:0 "テリトリーが多すぎます"
- territory_very_hard_difficulty:0 "テリトリーが多すぎます"
- territory_ai_difficulty:0 "テリトリーが多すぎます"
  CHARTER_BASE_RELUCTANCE:1 "基本拒否値："
  alert_trade_company_investment_instant:0 "§Y交易会社投資が可能！§!"
  alert_trade_company_investment_delayed:0 "以下の交易会社投資が出来ます：\n$INVESTMENTS$\n\n§Gクリックすると交易会社地域を順に見ることが出来ます§!"
@@ -946,13 +939,12 @@
  TERRITORY_CONVERT_RELIGION_NOT_ALLOWED:1 "\n§R改宗するためには、州が完全に中核化され、ステートの一部となっている必要があります§!"
  TERRITORY_CONVERT_CULTURE_NOT_ALLOWED:1 "§R文化を転向するためには、州が完全に中核化され、ステートの一部となっている必要があります§!"
  CHARTER_COMPANY_NO_AVAILABLE_PROVINCES:3 "我々の植民範囲内で、交易会社に割り当て可能な首都でなく既に交易会社ではない州を彼らは保有していていません。"
- CHARTER_COMPANY_CAPITAL_SAME_CONTINENT:1 "あなたと同じ大陸に首都のある国家から勅許会社の要求はできません"
  CHARTER_COMPANY_INDEBT:0 "$REASON$のため勅許会社を求めることはできません。\n"
  mechanic_has_parliament_yes:2 "議会を有効化\n貴族階級を無効化"
  COT_ADD_LEVEL_EFFECT:3 "$PROVINCE|Y$の交易中心地レベルが$DELTA|Y$増加します\n"
  COT_REMOVE_LEVEL_EFFECT:2 "$PROVINCE|Y$の交易中心地レベルが$DELTA|R$低下します\n"
  COT_RIGHT_CLICK_TO_DOWNGRADE_SUBJECT:0 "右クリックで威信$COST|R$と引き換えに$NAME|Y$へダウングレードします。従属国が支配する交易中心地をダウングレードすると、独立欲求が§R$LIBERTY_DESIRE$%§!増加します。"
- EVTOPTE700:1 "[Root.Monarch.GetName]の最愛の甥"
+ EVTOPTE700:2 "The beloved relative of [Root.Monarch.GetName]."
  clear_delta_tooltip:0 "§Yモスク§!、§Y大モスク§!、§Y市場§!、§Y交易倉庫§!または§Y証券取引所§!がある"
  NO_TEMPLATES_IN_COMBAT:0 "§R戦闘中、陸軍をテンプレートに適合させることはできません。§!"
  NO_TEMPLATES_IN_COMBAT_NAVY:0 "§R戦闘中、海軍をテンプレートに適合させることはできません。§!"
@@ -965,7 +957,14 @@
  DOESNT_HAVE_ANY_TRADE_COMPANY_INVESTMENT:0 "$INVESTOR|Y$は、$AREA|Y$におけるいずれの交易会社も保有していない\n"
  HAS_ANY_TRADE_COMPANY_INVESTMENT:0 "$INVESTOR|Y$は、$AREA|Y$における交易会社を保有している\n"
  dutch_republic.33.d2:1 "[Root.GetAdjectiveCap]州議会内での数年間の内ゲバは、[Root.GetName]の国民精神に否定的影響を与え始めました。州議会に反対する世論の高まりから、市民の間で多くの声援を呼び出しました。\n\nまもなく、一人の候補者が彼の敵対者の中心にそびえ立ち、州議会にまだ残るわずかな敵を打倒し、[Root.GetName]の輝かしい伝統を復活させます。"
- brahmins_estate_events.9.b.tt:1 "§Yバラモン§!が所有している州は全て、§Y15年§!間§Y非バラモンの宗教運動§!を獲得し、以下の効果を与えられます：\n地方不穏度：§G-5.00§!\n月毎の自治率の変動：§R+0.05%§!"
+ brahmins_estate_events.9.b.tt:2 "A fraction of all owned §YHindu§! provinces, roughly equal to the land share of the §YBrahmin§! estate, get §Y'Non-Brahmin Religious Movements'§! for §Y15 years§!, giving the following effects:\nLocal Unrest: §G-5.00§!\nMonthly Autonomy Change: §R+0.05%§!"
  GOV_REVOLUTIONARY_REPUBLIC:0 "革命共和国"
  GOVERNMENT_DESELECTED_TITLE:0 "政府の廃止"
  GOVERNMENT_DESELECTED_DESC:0 "あなたの国の変化により、政府$REFORM|Y$は実行不可能になったため廃止されました。政府は$REPLACEMENT|Y$に変更されます。"
+ RAJPUT_DESC:2 "By granting special privileges to the §YRajput§! estate, we gain access to their elite warriors. Rajputs have stronger morale than average troops, are cheaper to reinforce and retain their drill bonuses for a longer period of time."
+ CHANGE_REFORM_CANT_AFFORD:0 "You cannot change Government Reform as you don't have $COST|R$."
+ REFORM_PROGRESS_DEV:1 "\n $POINTS|G$ from an average local autonomy of §Y$LOCALAUTONOMY$%§!\nThe formula for calculating this is $BASE|+=0$ per year multiplied by (§Y100-Average Autonomy§!).\n"
+ REFORM_PROGRESS_BUILDINGS:0 "\n $POINTS|G$ from Courthouses and Town Halls"
+ COMPANY_PRICE_CALC:0 "Base: $BASE|Y0$¤\nOur Colonial Range §G$RANGE|0$§!¤\nIt can never be lower than $MIN|0Y$¤"
+ CHARTER_COMPANY_WE_AT_WAR:0 "You can't ask for charter company when your are in the middle of a war"
+ CHARTER_COMPANY_THEY_AT_WAR:0 "You can't ask for charter company from a nation that is at war"
