--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -78,17 +78,17 @@
  NO_INTEGREATION_PROGRESS_AT_WAR:0 "両国の統合を進めるためには平時である必要があります。"
  NO_ANNEX_PROGRESS_AT_WAR:0 "外交併合を進めるためには平時である必要があります。"
  NO_ANNEX_PROGRESS_WHILE_CAPITAL_TAKEN:0 "属国が首都を保持していない間は併合が進行しません。"
- NO_ANNEX_PROGRESS_LIBERTY:0 "彼らの独立欲求が高すぎるため、併合が進みません。併合のためには独立欲求が§Y$LIMIT$§!未満である必要がありますが、現在の値は§R$AMOUNT$§!です。"
+ NO_ANNEX_PROGRESS_LIBERTY:0 "They must have less than §Y$LIMIT$§! Liberty desire for annexation to progress, but currently have their liberty desire is §R$AMOUNT$§!.\n"
  ALL_CORES_AND_CLAIMS:0 "全ての中核州と請求権を持つ州"
- RIVAL_BENEFITS:0 "§Y$WHO$§!は我々のライバルであり、彼らに対し我々は以下のボーナスを得ます。\n"
+ RIVAL_BENEFITS:1 "§Y$WHO$§! is our Rival, and against them we have the following benefits:\n"
  RIVAL_DIPLO_ALLY:0 "彼らの敵と同盟を結べる可能性が高い。\n"
- RIVAL_BENEFITS_NONE:0 "ライバルに対して、我々は次のボーナスを得ます。\n"
+ RIVAL_BENEFITS_NONE:1 "Against a rival we have the following benefits:\n"
  RIVAL_BENEFITS_TRADE:0 "禁輸中の交易効率ペナルティがない。\n"
  RIVAL_PRESTIGE:0 "戦闘に勝利した時の威信の上昇$VAL$。\n"
  RIVAL_DIP_POWER:0 "和平交渉で州を要求するための£dip£外交君主点が$VAL$になる。\n"
  RIVAL_SPY:0 "諜報網の構築の速度が$VAL$増加する。\n"
- BENEFIT_FOR_EMPEROR:0 "皇帝が次を得ます"
- BENEFIT_FOR_MEMBER:0 "加盟国が次を得ます"
+ BENEFIT_FOR_EMPEROR:1 "Emperor gets:\n$MODIFIER$"
+ BENEFIT_FOR_MEMBER:2 "Princes & Free Cities get:\n$MODIFIER$"
  DIPIRO_SUPPORTING_INDEPENDENCE:0 "§Y$NAME$§!の独立を支援しています。"
  DIPIRO_INDEPENDENCE_SUPPORTED:0 "§Y$NAME$§!による独立の支援を受けています。"
  DIPIRO_ALLIED_WITH:0 "§Y$NAME$§!と同盟を結んでいます。"
@@ -557,7 +557,7 @@
  OFFER_WP:0 "白紙和平の提案"
  OFFER_PEACE:0 "貢物の提案"
  BACK:0 "戻る"
- BUILDSPYNETWORK_DISCOV:0 "我々の諜報員が発見されたので$WHEN|Y$まで諜報員を送れません。"
+ BUILDSPYNETWORK_DISCOV:1 "Since our spies have been discovered, we cannot send spies again until $WHEN|Y$."
  SPYNETWORK_DIPLO:0 "我々の$ADJ|Y$での諜報網規模は最大§Y100§!で、現在は$SIZE|Y$です。"
  SPYNETWORK_BENEFITS:0 "これは我々に次の効果をもたらします："
  SPYNETWORK_BENEFITS_SIEGE:0 "  $WHO|Y$に対しての包囲能力$AMT$"
@@ -703,7 +703,7 @@
  WAR_SCORE_COST:0 "戦勝点コスト：$VAL|Y$\n"
  POWER_COST_NOT_IN_WARGOAL:1 "戦争目標未達成：$VAL|Y$£dip \n"
  POWER_COST_RIVAL:0 "ライバル国から獲得：$VAL$\n"
- VASSAL_CANCEL_CONFIRM:0 "$VASSAL|Y$の属国化を中止しますか？"
+ VASSAL_CANCEL_CONFIRM:0 "Do you wish to cancel our vassalization with $VASSAL|Y$?"
  VASSAL_CANCEL_PRESTIGE:0 "\n威信$PRESTIGE|R$を消費します。"
  VASSAL_CANCEL_OPINION:0 "\n彼らは忠実であるため、我が国に対する評価が$OPINION|R$減少します。"
  VASSAL_CANCEL_CORES:0 "\n我が国が彼らの州に持つ全ての中核州と請求権を失います。"
@@ -888,3 +888,7 @@
  TRUCE_WITH_COUNTRY:0 "$SELECTED|Y$は$COUNTRY|Y$と$DATE|Y$まで停戦中です"
  GRANTFREECITYREQDESC_REFORM:0 "\n§R了承すると、現在のレベル1政府改革$CURRENT|Y$は廃止されます。§!"
  FABRICATE_CLAIM_FOR_VASSAL_SELECT_DESC:0 "請求権の捏造は、我が国の$ADJ|Y$諜報網規模を$COST|R$減少させた上で、$SUBJECT|Y$に§Y$PROV$§Wへの請求権をもたらします。この請求権は$YEARS|Y$年間有効です。"
+ BENEFIT_FOR_EMPEROR_PER_PRINCE:1 "Emperor gets (depends on number of princes):\n$MODIFIER$"
+ BENEFIT_FOR_ELECTOR_PER_PRINCE:1 "Electors get (depends on number of princes):\n$MODIFIER$"
+ BENEFIT_FOR_EVERYONE:1 "All in the Empire get:\n$MODIFIER$"
+ ENEMY_STRENGTH_UNACCOUNTED:0 "We will not have any information about the army strength of any of those nations that may be called in."
