--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -8,11 +8,11 @@
  exploration_events.2.a:0 "安っぽい装身具でも渡して原住民をなだめよう。"
  exploration_events.2.b:0 "引き返して原住民たちを殺し、彼らの黄金を奪おう！"
  exploration_events.3.t:0 "異世界の客"
- exploration_events.3.d:0 "我々の船が$PROVINCENAME$に近づくと、贈答品を満載した無数のカヌーが後に続いた。カヌー乗りたちは恐れることもなく我々の船に乗船し、そのうちの代表者と見られる2人の人物が、[Root.Capital.GetCapitalName]を訪れるよう船長を説得した。彼らに悪意はない様子で、通訳がおぼろげながらに聞き取れた言葉からすると、我々が到着したのはちょうど彼らの祝祭の最中だったようだ。我々の船のマストの配置、帆や艤装が彼らにとって重要な意味を持つ形状をしており、島を時計回りで周回する航路が祭事の行列が通る道筋と一致していたそうだ。このため原住民は我々を友好的だとみなしているが、一歩間違えれば彼らの態度は一変するだろう…"
+ exploration_events.3.d:1 "As our ship approaches $PROVINCENAME$ large numbers of gift laden canoes start to follow it. The canoes' occupants have fearlessly boarded the vessel and two seemingly important fellows are trying to persuade the ship's captain to follow them to [tribal_nation.Capital.GetCapitalName]. Their intentions seem innocent and we can espy from the few words our translator can pick out that we have arrived just in time for a festival of some sort. Our ship's mast formation, sails and rigging resemble certain significant artefacts for the natives and our clockwise route around the island mirrored the path the processions take during this festival. This has convinced the natives that we are friendly but one false move and it might change..."
  exploration_events.3.a:0 "彼らの原始的な伝統を受け入れよう。"
  exploration_events.3.b:0 "彼らとの接触は避け、上陸はしない！"
  exploration_events.4.t:0 "栄光の道"
- exploration_events.4.d:0 "見張りは住居の兆候を報告していたが、船は原住民を見つけられずにいた。しかし、とうとう$PROVINCENAME$の沿岸に村を発見した。小規模な軍隊が下船し歓迎を受けた。どうやら我々が彼らよりも身長が高くひげを蓄えていたことが、原住民には魅力的に映ったようだ。原住民はひげが無く、何らかの困難を抱えており、彼らの神話や伝説がひげを蓄えた神々が海から来て彼らの元を訪れる時を予言していたことを我々に伝えた。与えられた食糧と金から、州が繁栄しており、我々にとって大きな価値があることを示している。"
+ exploration_events.4.d:0 "The lookout had reported signs of dwellings but the ship had yet to see any natives until at long last a coastal village in $PROVINCENAME$ was sighted. A small force disembarked and was hospitably received, something that was attributed to the natives' fascination with the men who were taller in stature than them and bearded. The natives were beardless and with some difficulty they managed to communicate that their myths and legends foretold of a time when their bearded gods would come from the sea to visit them. Food and gold were given, which indicates that the province is prosperous and would be of great value to us."
  exploration_events.4.a:0 "こここそが約束された地だ！"
  exploration_events.5.t:0 "夏に入った船"
  exploration_events.5.d:0 "クリストファー・コロンブスは$PROVINCENAME$の人々について的確に記録している。「彼らは彼らの持つものすべてを我々に与えてきました。それも善意で…彼らは相手をもてなすことに無上の喜びを感じるようです…彼らは非常に紳士的で、悪というものを知らず、殺人や盗みとも無縁であります…陛下も、彼らがこの世界で最高の人々であるとお考えになるはずです…彼らは隣人を彼ら自身であるかのように愛し、幸せな会話を交わし、礼儀正しく、そしていつも笑っているのです…」"
@@ -92,7 +92,7 @@
  seven_cities_events.5.a:0 "彼らを連れて、銀を見つけよう！"
  seven_cities_events.5.b:0 "そこに真実の一粒はない！"
  seven_cities_events.6.t:0 "ノルムベガ"
- seven_cities_events.6.d:0 "フランスの航海者が、40リーグ（約200km）以上の幅を持ち、多くの島々が点在する大河について報告した。これによれば、河の中15リーグほどにノルムベガという都市があり、あらゆる種類の毛皮を売る賢者達が住んでいるという。彼らはヴァイキングの子孫でクロテンの革を着て他の毛皮で着飾り、ラテン語に似た言語を話し、長身かつハンサムであり、太陽を崇拝するのだそうだ。また都市自体も極めて豊かで、住民はみな金を装飾品として身に着けていたというから、近くには金山もあるはずだ。"
+ seven_cities_events.6.d:0 "A French navigator reported that he had found a great river, more than 40 leagues wide and full of islands. According to his notes, fifteen leagues within this river there is a town called Norumbega, with clever inhabitants who trade in furs of all sorts. They are dressed in furs and wearing sable, with a language similar to Latin. These tall and handsome people worship the sun. The town is very rich and there must be a source for the gold most of the people were wearing as jewelry."
  seven_cities_events.6.a:0 "コンキスタドールを送ろう！この地を見つけなければ。"
  seven_cities_events.6.b:0 "無駄な努力だ。"
  seven_cities_events.7.t:0 "サグネ王国"
@@ -104,7 +104,7 @@
  seven_cities_events.8.a:0 "そのキビラの黄金の杯を見つけろ！"
  seven_cities_events.8.b:0 "知っているさ、それは無駄な努力だと。"
  seven_cities_events.100.t:0 "征服者の死"
- seven_cities_events.100.d:0 "探検隊は発見された富と同じ大きさの十字架を隊に戻せと命じ、斥候を送り出した。この不幸な出来事は人の背ほどの十字架が到着し、隊がペースを上げていたときに起こった。彼らが[Root.GetCapitalName]に入ると、$PROVINCENAME$の原住民が斥候を殺し、隊を待ち構えていることが明らかとなった。大部分は未開人に殺され、死に物狂いで逃げ切った者はわずかであった。彼らは、征服者が最初の死者の一人であり、また、責めを負うべき人間であると伝えた。彼は赤い羽を持つひょうたんを贈り物として贈ったが、それは原住民にとって戦争を意味していた。"
+ seven_cities_events.100.d:1 "The expedition sent forth a scout with the instructions of sending back crosses to the main party with the size of the cross equal to the wealth discovered. Soon, a cross as tall as a person arrived and the main party picked up their pace, scenting their prize. As they entered a large settlement in $PROVINCENAME$, they found that the natives had killed the scout and were waiting for the rest of the party. Most fell to the savages, but a desperate few managed to escape. They tell us that the conquistador was one of the first to die, and that the scout was to blame. He had offered a gift of a gourd with a red feather, which turned out to be the natives' symbol for war."
  seven_cities_events.100.a:0 "偉大な征服者の死を悼もう。"
  seven_cities_events.101.t:0 "革を食うか、餓死するか"
  seven_cities_events.101.d:0 "我々が$PROVINCENAME$に入る前でさえ、探検隊の補給は乏しかったが、今はともかくこの土地で手に入るもので生き残らなければならない。たとえそれがあまりないにしても。ヘビの味は鶏肉と革製品のようだ…剣や鎧から煮込んだ革を噛みながら強く目を閉じれば、噛んでいるものが牛肉のジャーキーだと感じられるかもしれない。助けを送ってくれ、さもなければ我々は目的地に達することはない。"
@@ -204,7 +204,7 @@
  sce_search_fountainofyouth:0 "若返りの泉の探索"
  desc_sce_search_fountainofyouth:0 "この征服者は若返りの泉、生命の水を探しています。"
  sce_life_water:1 "「生命の水」"
- desc_sce_life_water:1 "若返りの泉の水はさわやかで甘く、巡礼と神秘的な場所として機能している。若返りの能力についてはほとんど言及されていないが…"
+ desc_sce_life_water:1 "The water of the Fountain of Youth is refreshing and sweet, and it serves as a place of pilgrimage and wonder. There is little to be said for its ability to restore life, however..."
  sce_search_cibola:0 "シボラの探索"
  desc_sce_search_cibola:0 "この征服者はシボラ、七つの黄金郷の一つを探しています。"
  sce_cibola_silver:1 "シボラ"
@@ -212,11 +212,11 @@
  sce_search_cityofcaesars:0 "皇帝の都を探す"
  desc_sce_search_cityofcaesars:0 "征服者は皇帝の都を探している。金銀財宝、富と繁栄の街だ。"
  sce_city_of_caesars:1 "皇帝の都"
- desc_sce_city_of_caesars:1 "伝説のシーザーズの都市は、真の石英の山々にまたがっている。数千年とは言わないが、我々がそれを全て採掘するには何百年もかかるだろう！"
+ desc_sce_city_of_caesars:1 "The legendary City of the Caesars sits astride a veritable mountain of quartz. It would take us hundreds, if not thousands of years to mine it all!"
  sce_search_sierradelaplata:0 "シエラ・デ・ラ・プラタの探索"
  desc_sce_search_sierradelaplata:0 "征服者は銀の山々、シエラ・デ・ラ・プラタを探索している。"
  sce_sierradelaplata_quartz:1 "シエラ・デ・ラ・プラタ"
- desc_sce_sierradelaplata_quartz:1 "シエラ・デ・ラ・プラタの伝説は、銀で満たされた山々である。伝説が正しかっただけでなく、古代の玉座の頂点にあるダイヤモンドの王冠については言及していなかった！"
+ desc_sce_sierradelaplata_quartz:1 "The legend of Sierra de la Plata speaks of a mountain filled with silver. Not only was the legend correct, but it neglected to mention the crown of diamonds perched atop the ancient throne!"
  sce_sierra_dela_plata:0 "シエラ・デ・ラ・プラタ"
  desc_sce_sierra_dela_plata:0 "我らの征服者が、白き王によって治められる白銀の山を発見した！これは我々に威信と富をもたらすだろう。"
  sce_search_norumbega:0 "ノルムベガの探索"
@@ -230,7 +230,7 @@
  sce_saguenay_abandoned:1 "サグネ王国"
  desc_sce_saguenay_abandoned:1 "サグネの古代都市には、異端の聖像と踊る異教徒の神々の彫像で満ちている。それらを溶かし富を再利用することは我々の義務である。"
  sce_golden_cups:1 "キビラの黄金都市"
- desc_sce_golden_cups:1 "枝から吊るされた黄金の杯は無かったものの、貴重な翡翠の鉱床は没落した街の下に眠っていた。時間と労力はかかるが、この資源を抽出することは最も価値のある試みである。"
+ desc_sce_golden_cups:1 "Despite the lack of golden cups hanging from branches, valuable jade deposits have been located under the ruined city. It will take time and effort, but extracting this material will prove a most worthy endeavor."
  cannibal_conquistador:0 "人肉を食った征服者"
  threatening_punishment:0 "処罰への脅し"
  seven_cities_events.300.t:0 "我々の間の女性"
@@ -256,7 +256,7 @@
  seven_cities_events.305.d:0 "$PROVINCENAME$の原住民は、我々の探検隊に対して必ずしも友好的であったわけではない。我々が出会った原住民は、夜中や、2人の原住民が殺された闘争の中で我々の武器を盗もうとした。隊員は安全のため再び野営を行う前に1日で100マイル以上を逃げた。原住民が再び隊員のすぐ後ろに迫っている兆候があり、彼らは促されれば、長距離の行進をもう一度行う力を絞り出すかもしれない…"
  seven_cities_events.305.a:0 "逃げろ、まぬけが！"
  seven_cities_events.306.t:0 "白旗を振るんだ"
- seven_cities_events.306.d:0 "二つの部族、一つは$COUNTRY$の、もう一つは隣国の部族で、両者はライバルであるが、我々の征服者は手遅れになるまでこれを認識していなかった。両者は探検隊の通行を許可するための貢物を要求した。一方の部族の族長へ最初に贈り物を提供したことで、我々の征服者は他方の族長を侮辱し怒らせた。さらに、提供された贈り物は族長が満足するものではなく、部族の戦士は探検隊の食糧を奪おうとした。征服者は毅然とした態度で武器を示し、彼の副官は剣を振るい、暴力による脅しをかけた。族長たちは今度は引き下がり、両方の族長により良い贈り物が提示された。"
+ seven_cities_events.306.d:1 "The [Root.Owner.GetName] and [rival_tribe.GetName] tribes are rivals, something our conquistador didn't realize until too late. They both demanded tribute from the expedition to allow them passage. By offering one native chief gifts first, our conquistador insulted and angered the other chief. The gifts offered were not to the chiefs' satisfaction and some warriors tried to take the expedition's provisions. The conquistador took a firm stand, and he and his second in command brandished their swords and threatened violence. The chiefs backed down and better gifts were presented to them both."
  seven_cities_events.306.a:0 "彼らの和睦を試みよう。"
  seven_cities_events.306.b:0 "よくやった！"
  seven_cities_events.307.t:0 "出血する歯茎と抜け落ちる歯"
@@ -427,7 +427,7 @@
  maya_religion_events.3.t:0 "人身御供"
  maya_religion_events.3.d:0 "奴隷や囚人たちがマヤの神々への一般的な生贄であるが、七面鳥、犬、リス、ウズラ、イグアナなどの動物でさえも、適切な供物であると考えられている。神は常により多くの血を渇望しており、我々の隣人たちは、孤児と私生児が他のどの生贄よりも早く神をなだめると主張している。"
  maya_religion_events.3.a:0 "動物を生贄にしてみよう。"
- maya_religion_events.3.b:0 "子供を生贄に捧げる－彼らに親がいない限り。"
+ maya_religion_events.3.b:0 "Sacrifice children - as long as they are orphans."
  maya_religion_events.4.t:0 "創造と破壊の循環"
  maya_religion_events.4.d:0 "我々の物語や神話は、人が神に対する義務を怠った場合に起こる結果を思い出させる、創造と破壊の循環の繰り返しを伝えている。我々には、我々の存続を可能にする神々に対する責任がある。創造と混沌の神々と他の勢力は、世界の破壊をもたらすかもしれない、それぞれの52年間を戦う。神に対する義務を無視すれば、すべての地上の生き物の運命を決める戦いは、我々の望む結果では終わらないかもしれない。"
  maya_religion_events.4.a:0 "…そして我々は人々を恐怖で覆うことしかできない…"
@@ -479,10 +479,10 @@
  maya_religion_events.15.d:0 "$FROMCOUNTRY$は、戦い、犠牲と暮らしの神であり、火の神であるトヒル、太陽神と雨の神に捧げられるケツァル羽を強く欲している。彼らは我々から羽を購入したいと望んでいる。"
  maya_religion_events.15.a:0 "彼らと交易する。"
  maya_religion_events.15.b:0 "拒否する。"
- maya_religion_events.16.t:0 "交易の提案の受け入れ"
+ maya_religion_events.16.t:0 "Trade offer accepted"
  maya_religion_events.16.d:0 "$FROMCOUNTRY$は我々と交易することに同意し、我々は今、トヒルを満足させるために必要なケツァル羽を持っている！"
  maya_religion_events.16.a:0 "良し、彼らは真の友人だ。"
- maya_religion_events.17.t:0 "交易の提案の拒否"
+ maya_religion_events.17.t:0 "Trade offer refused"
  maya_religion_events.17.d:0 "$FROMCOUNTRY$は我々と交易することを拒否しており、我々は彼らからケツァル羽を購入することはできない。"
  maya_religion_events.17.a:0 "残念だ。"
  maya_religion_events.18.t:0 "エクチュア"
@@ -653,8 +653,6 @@
  custom_idea_mercenary_cost_desc:0 "傭兵の募集は、常に時間がかかり複雑な業務であったため、多くの場合、我々自身の兵士に頼ることが良い選択であった。募集を正式なものとすることによって、我々は多くの問題を回避し、傭兵の募集を容易にした。"
  custom_idea_merc_maintenance_modifier:0 "傭兵のための称号"
  custom_idea_merc_maintenance_modifier_desc:0 "傭兵指揮官の称号を付与することで、最良の兵士たちを公正な価格で確保し、傭兵の維持費を削減することができる。"
- custom_idea_possible_mercenaries:0 "傭兵募集の施設"
- custom_idea_possible_mercenaries_desc:0 "傭兵の募集のために我々国全体に施設を設置することにより、我々が利用できる傭兵部隊の数が増えた。"
  custom_idea_land_forcelimit_modifier:0 "国家軍の確立"
  custom_idea_land_forcelimit_modifier_desc:0 "国家軍により、戦争中にもはや傭兵や私的な軍隊に頼る必要はなくなり、より多くの兵士を必要とする大規模な軍隊を作り出すことができるようになる。"
  custom_idea_global_manpower_modifier:0 "農民の徴兵"
@@ -668,7 +666,7 @@
  custom_idea_army_tradition:0 "実力主義による昇進"
  custom_idea_army_tradition_desc:0 "高貴な血縁のものを昇進させる古い方法は、実力によって行われる昇進への賛成により破棄されている。"
  custom_idea_army_tradition_decay:0 "士官学校の設立"
- custom_idea_army_tradition_decay_desc:0 "軍隊の指導への大きな保証や熱意を示した者は、将校として、また紳士としてどのように行動するかを教える士官学校に入学することができるようになった。"
+ custom_idea_army_tradition_decay_desc:0 "Those who show great promise or great eagerness in leading troops are now able to enroll in an officer school, which will teach them how to act as an officer and a gentleman."
  custom_idea_leader_land_fire:0 "ライフルの訓練"
  custom_idea_leader_land_fire_desc:0 "「兵士に銃を与えれば、彼は一日のうちに自分を守ることができるようになる。ライフルを使うよう兵士に教えよ、彼は決して再び無防備になることはないだろう」"
  custom_idea_leader_land_shock:0 "騎兵将校"
@@ -843,7 +841,7 @@
  nahuatl_events.29.c:0 "控えめな改善、それが我々ができるすべてだ。"
  nahuatl_events.29.dd:0 "我々は現時点で多くを行う余裕はない。"
  nahuatl_events.30.t:0 "チョルラへの巡礼"
- nahuatl_events.30.d:0 "我々のすべての貴族は、チョルラの寺院都市にあるケツァルコアトルの偉大な聖堂に旅をするのが伝統である。ここでは慈悲深い羽のあるヘビ、芸術と雨の守護者を崇拝することができる、メソアメリカの貴族たちにとっては、戦闘で互いに対峙する必要なく、彼らの富を示すことができる。"
+ nahuatl_events.30.d:0 "It is traditional for all our nobles to travel to the great shrine of Quetzalcoatl in the temple city of Cholula. Here the benevolent feathered serpent, protector of the arts and rains, can be worshipped and here the nobles of Mesoamerica can show of their wealth without having to face each other in combat."
  nahuatl_events.30.a:0 "ケツァルコアトルに敬意を払おう。"
  nahuatl_events.30.b:0 "人身御供を求めない神などいるのか？"
  nahuatl_events.31.t:0 "地震"
@@ -932,7 +930,7 @@
  inti_events.12.b:0 "リャマの生贄が、彼らの負担を和らげる。"
  inti_events.12.c:0 "彼らを暖かく保つため、美しい布を捧げる。"
  inti_events.13.t:0 "寺院の建設"
- inti_events.13.d:0 "[Root.GetName]州の人々は、分割され、様々な地元のワカの神々を崇拝している。したがって、この地域の精神的および管理的な生活のための自然な中心地として、ここではインティの偉大な寺院を建設することが決断された。\n建設の指揮官は、[Root.Owner.Monarch.GetName]に寺院の二つの異なる計画を提示した。最初の計画は、二つの川の神聖な合流地であるティンクイに寺院を建設するものである。一方、もう一つの計画では、新しい寺院の基盤として古いワカの聖堂を利用することが提唱されている。"
+ inti_events.13.d:0 "The people of the province of [Root.GetName] are divided and worship various local Huaca Gods. It has therefore been decided that a great temple of Inti should be constructed here as a natural center for the spiritual and administrative life of the region.\nThe leader of the construction has presented [Root.Owner.Monarch.GetName] with two different plans for the temple. The first plan is to construct the temple at a Tincuy, the sacred confluence of two streams, while the other plan calls for making use of an old Huaca shrine as the base of the new temple."
  inti_events.13.a:0 "新しい寺院には新しい場所が必要だ、ティンクイがそれだ。"
  inti_events.13.b:0 "古い聖堂を利用しよう。"
  inti_events.14.t:0 "神託と占い"
@@ -1106,3 +1104,5 @@
  custom_idea_possible_mil_policy_desc:0 "我々は現代で最高の軍事知性を国境を越えて見つけるべきだ。"
  seven_cities_events.500.t:1 "[long_pig_country.GetName]の人食いコンキスタドール"
  seven_cities_events.500.d:1 "[long_pig_country.GetName]の征服者が、遠征の途中で人肉を食したことを認めた！訪れた部族の一つで勧められ、何の肉か分からないと言ってごまかそうとは試みたのだが。彼らが与えられた名前は「長い豚」を意味するという。"
+ custom_idea_mercenary_manpower:0 "Mercenary Recruitment Centers"
+ custom_idea_mercenary_manpower_desc:0 "Creating centers all over our country for the recruitment of mercenaries has increased the amount of mercenary companies available to us."
