--- a/source/localisation/government_names_l_english.yml
+++ b/source/localisation/government_names_l_english.yml
@@ -152,7 +152,7 @@
  METROPOLIS:0 "大都市"
  GREAT_METROPOLIS:0 "巨大都市"
  LORD_BISHOP:0 "司教卿"
- LORD_ARCHBISHOP:0 "大司教卿"
+ LORD_ARCHBISHOP:0 "Lord Archbishop"
  LAMA:0 "ラマ"
  TULKU:0 "トゥルク"
  GREAT_TULKU:0 "大トゥルク"
@@ -505,3 +505,5 @@
  GREAT_MAMBO_fem:0 "大マンボ"
  GREAT_LAKAN_fem:0 "大ラカン"
  HEIR_fem:0 "女後継者"
+ POPE_ELECTOR:0 "教皇・選帝侯"
+ POPETTE_ELECTOR:0 "女教皇・選帝侯"
