--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -406,7 +406,7 @@
  NEW_ACHIEVEMENT_11_15_NAME:0 "海事領事館"
  NEW_ACHIEVEMENT_11_15_DESC:0 "アラゴンで、地中海における全ての交易中心地を征服する。"
  NEW_ACHIEVEMENT_11_16_NAME:0 "長寿と繁栄を"
- NEW_ACHIEVEMENT_11_16_DESC:0 "70歳以上の統治者のもとで、繁栄状態の直轄領を30エリア保有する。"
+ NEW_ACHIEVEMENT_11_16_DESC:0 "70歳以上の統治者のもとで、繁栄状態のステートを30保有する。"
  NEW_ACHIEVEMENT_11_17_NAME:0 "この壁を壊しなさい"
  NEW_ACHIEVEMENT_11_17_DESC:0 "ベルリンに集中砲火を浴びせる。"
  NEW_ACHIEVEMENT_11_18_NAME:0 "黄金帝国"
@@ -414,7 +414,7 @@
  NEW_ACHIEVEMENT_11_19_NAME:0 "チェリーピッキング"
  NEW_ACHIEVEMENT_11_19_DESC:0 "従属大名から、星3つの将軍を徴用する。"
  NEW_ACHIEVEMENT_11_20_NAME:0 "八旗伝説を求む"
- NEW_ACHIEVEMENT_11_20_DESC:0 "八旗軍として100連隊編成する。"
+ NEW_ACHIEVEMENT_11_20_DESC:1 "Starting as a Jurchen nation, have 100 regiments of Banners raised at the same time."
  NEW_ACHIEVEMENT_11_21_NAME:0 "スウィートハーモニー"
  NEW_ACHIEVEMENT_11_21_DESC:0 "儒教国で7つの宗教を調和する。"
  NEW_ACHIEVEMENT_11_22_NAME:0 "鎖国令"
@@ -428,7 +428,7 @@
  NEW_ACHIEVEMENT_11_26_NAME:0 "3つの小さな貢納部族"
  NEW_ACHIEVEMENT_11_26_DESC:0 "3つの部族国家を貢納国として持つ。"
  NEW_ACHIEVEMENT_11_27_NAME:0 "メイド・イン・ジャパン"
- NEW_ACHIEVEMENT_11_27_DESC:0 "日本で、1655年までに「工場」制度を受け入れる。"
+ NEW_ACHIEVEMENT_11_27_DESC:1 "Embrace "manufactories" institution as Japan by 1655."
  NEW_ACHIEVEMENT_11_28_NAME:0 "第一タウングー帝国"
  NEW_ACHIEVEMENT_11_28_DESC:0 "タウングーで、1500年までにビルマ文化圏を統一する。"
  NEW_ACHIEVEMENT_11_29_NAME:0 "啓蒙の弟子"
@@ -462,7 +462,7 @@
  NEW_ACHIEVEMENT_12_21_NAME:0 "ダヴィド建設王"
  NEW_ACHIEVEMENT_12_21_DESC:0 "イメレティで、グルジアを建国し、建築可能な建築スロットを持たない。"
  NEW_ACHIEVEMENT_12_22_NAME:0 "ヴォルテールの悪夢"
- NEW_ACHIEVEMENT_12_22_DESC:0 "神聖ローマ帝国に75ヶ国以上所属する。"
+ NEW_ACHIEVEMENT_12_22_DESC:1 "Have at least 100 countries in the HRE."
  NEW_ACHIEVEMENT_12_24_NAME:0 "パーンディヤ帝国"
  NEW_ACHIEVEMENT_12_24_DESC:0 "マドライで開始し、パーンディヤの領土を征服する。"
  NEW_ACHIEVEMENT_12_25_NAME:0 "エジプトの君主論"
@@ -589,3 +589,33 @@
  NEW_ACHIEVEMENT_43_DESC:0 "ウァステカで開始し、マヤを建国する。"
  NEW_ACHIEVEMENT_44_NAME:0 "ここはどこ？"
  NEW_ACHIEVEMENT_44_DESC:0 "ランダムな新世界を有効にした新世界の原住民で、新世界全体を探検する。"
+ NEW_ACHIEVEMENT_45_NAME:0 "A.E.I.O.U."
+ NEW_ACHIEVEMENT_45_DESC:0 "オーストリアのミッションを完了する。"
+ NEW_ACHIEVEMENT_46_NAME:0 "Napoleon’s Ambition"
+ NEW_ACHIEVEMENT_46_DESC:0 "革命フランスとして革命を10ヵ国に広げる。"
+ NEW_ACHIEVEMENT_47_NAME:0 "Everything's Coming Up Mulhouse"
+ NEW_ACHIEVEMENT_47_DESC:0 "Starting as Mulhouse, become Emperor of the HRE and completely decentralize the Empire."
+ NEW_ACHIEVEMENT_48_NAME:0 "Global Hegemony"
+ NEW_ACHIEVEMENT_49_DESC:0 "Reach 100% Strength as any type of Hegemon."
+ NEW_ACHIEVEMENT_50_NAME:0 "God Tier"
+ NEW_ACHIEVEMENT_50_DESC:0 "Become a Tier 5 Defender of the Faith as a nation that is neither Catholic nor Sunni."
+ NEW_ACHIEVEMENT_51_NAME:0 "Spaghetti Western"
+ NEW_ACHIEVEMENT_51_DESC:0 "Starting as Bologna, become Mexico or Texas."
+ NEW_ACHIEVEMENT_52_NAME:0 "Don’t be Cilli"
+ NEW_ACHIEVEMENT_52_DESC:0 "Starting as Cilli, form another nation."
+ NEW_ACHIEVEMENT_53_NAME:0 "Inner Turmoil"
+ NEW_ACHIEVEMENT_53_DESC:0 "Starting as The Isles, own 20 provinces by 1500, none of which are on Islands."
+ NEW_ACHIEVEMENT_54_NAME:0 "Stern des Südens"
+ NEW_ACHIEVEMENT_54_DESC:0 "Form Bavaria starting as München and have your Subject Bremen own Werder."
+ NEW_ACHIEVEMENT_55_NAME:0 "Kingdom of God"
+ NEW_ACHIEVEMENT_55_DESC:0 "教皇領で開始し、神の王国になる。"
+ NEW_ACHIEVEMENT_56_NAME:0 "Stiff Upper Lippe"
+ NEW_ACHIEVEMENT_56_DESC:0 "As Lippe, own all of the British Isles."
+ NEW_ACHIEVEMENT_57_NAME:0 "On the Rhodes Again"
+ NEW_ACHIEVEMENT_57_DESC:0 "Starting as The Knights, conquer and core Constantinople, Jerusalem and Antioch."
+ NEW_ACHIEVEMENT_58_NAME:0 "Czechs and Balances"
+ NEW_ACHIEVEMENT_58_DESC:0 "Starting as Bohemia, grant at least two privileges to each estate while having at least 50% Crown Land."
+ NEW_ACHIEVEMENT_59_NAME:0 "Mary of Lotharingia"
+ NEW_ACHIEVEMENT_59_DESC:0 "Starting as Burgundy, form Lotharingia and have a female ruler named Marie."
+ NEW_ACHIEVEMENT_60_NAME:0 "Holiest Roman Empire"
+ NEW_ACHIEVEMENT_60_DESC:0 "As either the Papal States or the Emperor, have the Papal States as an Elector while the HRE is officially Catholic."
