--- a/source/localisation/ledger_l_english.yml
+++ b/source/localisation/ledger_l_english.yml
@@ -209,6 +209,6 @@
  LEDGER_GOVERNMENT_TYPE:0 "政体"
  LEDGER_GOVERNMENT_NAME:0 "政府名称"
  LEDGER_GOVERNMENT_LEGITIMACY:0 "正統性"
- LEDGER_GOVERNMENT_ADMIN_EFF:0 "統治効率"
  LEDGER_GOVERNMENT_ABSOLUTISM:0 "絶対主義"
  LEDGER_GOVERNMENT_MAX_ABSOLUTISM:0 "最大の絶対主義"
+ LEDGER_GOVERNMENT_CORRUPTION:0 "Corruption"
