--- a/source/localisation/loadingtips_l_english.yml
+++ b/source/localisation/loadingtips_l_english.yml
@@ -78,7 +78,7 @@
  LOADING_TIP_76:0 "隣接する州だけでなく、中核州と海域を共有している全ての州にも請求権を捏造することができます。"
  LOADING_TIP_77:0 "多くの一般的な行動にはホットキーが割り当てられています。\nそれらはツールチップで確認できるでしょう。"
  LOADING_TIP_78:0 "選択したユニットをグループに割り当てるためにCtrl+数字キーを、問題のユニットをすぐ選択するために数字キーを押しましょう。"
- LOADING_TIP_79:0 "人的資源の回復はゆっくりです。人的資源を節約するために傭兵部隊を加えることを考えてみましょう。"
+ LOADING_TIP_79:1 "Manpower recovers slowly. Consider hiring Mercenary Companies to conserve Manpower."
  LOADING_TIP_80:0 "Homeキーを押すとあなたの国の首都の州に移動します。"
  LOADING_TIP_81:0 "熟練した顧問はそうでない顧問より多くの費用がかかります。能力の高い顧問を雇う前に、余裕があるか確認しましょう。"
  LOADING_TIP_82:0 "軍事ユニットを比較する時、射撃や白兵の点数だけを見てはいけません。射撃や白兵への補正も心の中に止めておいて下さい。"
