--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -27,7 +27,7 @@
  mch_reform_the_censorate_title:0 "御史台の改革"
  mch_reform_the_censorate_desc:0 "明朝末期には汚職がはびこった。清の御史台は皇帝の目と耳であり、中国全土の汚職を探し出し、腐った役人を摘発する。"
  mch_establish_tributaries_title:0 "朝貢の確立"
- mch_establish_tributaries_desc:0 "我々は明に取って代わったため、世界諸国は我々を新しい宗主に認めねばならない。朝貢の再開は難しい仕事であり、その内のいくつかは、平和的に新しく独立国が誕生したこともあって、愚かにも独立に夢中になりすぎるかもしれない。"
+ mch_establish_tributaries_desc:0 "We have supplanted the Ming, and thus the nations of the world must acknowledge us as their new overlords. Re-establishing the imperial tributaries will be a difficult task, and some may, foolishly, be too enamored with their newfound independence to submit peacefully."
  mch_harmonious_empire_title:0 "調和の取れた帝国"
  mch_harmonious_empire_desc:0 "中国は清の支配の下に統一されなければならない。清の聡明なる統治によって、中国に住む人々は国家や宗教の争いから解放され、平和を謳歌するだろう。"
  mch_library_of_the_four_treasuries_title:0 "四庫全書"
@@ -48,7 +48,7 @@
  mch_subjugate_dai_viet_desc:0 "大越の主は中華様式を好んでおり、儒教の官僚機構さえ模倣している。彼らの見せかけは所詮見せかけに過ぎず、真の皇帝に服従させねばならない。"
  devastate_china_tooltip2:0 "§Y華南§!地方か、もしくは§Y西南§!地方で、開発度§Y 25§!以上の州を自国で領有する"
  mch_mountain_title:0 "山の聖地"
- mch_mountain_desc:0 "朝鮮人が白頭とも呼ぶブクリ山は、我が民族の起源とされる聖地だ。伝説によると、山の湖に住んでいた天女がカササギの落とした果実で妊娠した。彼女の息子は初代女真族の族長となった。その山の近くに神殿を建造し、先祖に敬意を表さねばならない。"
+ mch_mountain_desc:0 "Bukuri Mountain, also called Paektu by the Koreans, is the sacred origin site of our people. According to legend a heavenly maiden residing at the mountain lake was impregnated by a fruit dropped by a magpie. Her son become the first Jurchen chief. We must honor our ancestors by building shrines near the Mountain."
  breached_great_wall:0 "万里の長城の突破"
  desc_breached_great_wall:0 "我が軍が万里の長城を突破し、本土と中国敵地の自由な行き来が可能となった。"
  mch_treason_modifier:0 "万里の長城での背信"
@@ -363,7 +363,7 @@
  annex_country_japan:0 "国家の併合"
  annex_country_japan_desc:0 "戦争目標は首都占領です。そうすれば例え他のルールで許可されていなかったとしても対象国を併合することができるようになります。"
  kor_conquer_changbai_title:0 "白頭山への交通路"
- kor_conquer_changbai_desc:0 "朝鮮人は代々、白頭山（中国語では「長白山」）を神聖視してきた。朝鮮からの交通路が満州の慈悲に頼る必要がないようにせねばならない。\n\n白頭山は、カルデラの中に、天池の中で知られる大きな噴火口湖がある活火山だ。これは946年の「千年紀」噴火で形成されたもので、記録に残る中で最大級の大噴火の一つであり、遠く日本まで届いたと報告されている。"
+ kor_conquer_changbai_desc:1 "For generations, Koreans have considered Paektu Mountain - an active volcano with a large crater lake known as Heaven Lake, which was formed in a massive eruption many years ago - to be sacred. We must ensure that Korean access to it is not dependent on the benevolence or otherwise of the Manchurians."
  kor_seize_southern_manchuria_title:0 "国境の占拠"
  kor_seize_southern_manchuria_desc:0 "満州との国境を朝鮮半島の領域を超えて押し戻すことで、朝鮮の国力と安全保障を大きく上げることができる。"
  kor_end_manchuria_title:0 "満州の終焉"
@@ -372,11 +372,11 @@
  kor_build_army_mission_title:0 "扶養限界の確立"
  kor_build_army_mission_desc:0 "成長している国家は、適切な規模の軍隊を維持する必要がある。我々の軍隊を拡大することで、我々は海外の政治的利益をさらに高め、国内経済を刺激することができる。"
  kor_harness_seokleon_title:0 "石合戦の利用"
- kor_harness_seokleon_desc:1 "ソクチョン(「石戦」)は、朝鮮独自の集団で互いに石を投げ合って戦う試合のことだ。参加者や見物人の負傷率は避けられないほど高く、大きな石で武装して道をうろついている手に負えない若者たちの脅威もあって、この慣習を違法としたくなる。しかし、先見の明ある[Root.Monarch.GetTitle]なら、それを我が軍を強化する一種の軍事訓練として扱い、敵がどんな物を投げようとも絶対にそれに耐えうるようにできるだろう！"
+ kor_harness_seokleon_desc:2 "The seokjeon, or stone battle, is a uniquely Korean game involving teams of combatants throwing stones at each other. The unavoidably high injury rate among participants and onlookers, as well as threats from unruly young men prowling the streets armed with large rocks, make it tempting to outlaw this practice. However, a forward-thinking [Root.Monarch.GetTitle] might be able to make use of it as a form of martial training to harden our troops and ensure they can withstand anything the enemy can throw at them!"
  kor_expand_hwacha_title:0 "火車発射!"
- kor_expand_hwacha_desc:1 "火車は、我が技術者がー中国の火薬をリバースエンジニアリングしてー開発した、一度に100発の弾の発射を可能とした多連装噴進弾発射装置だ。15世紀に入ってから、我が軍は要塞や艦船へ配備を始め、さらに、陸軍にも配備し始めた。配備された陸軍は、密集陣形を取った歩兵隊を崩すのに非常に極めて有益な存在である。火車の保有量を拡大することで、凄まじい火力がもたらす猛烈な弾幕は、間違いなく極東全域で高名を轟かせ、ーそして恐れられるーようになる。"
+ kor_expand_hwacha_desc:2 "The hwacha is a multiple rocket launcher developed by our engineers capable of firing 100 rockets at a time - devastating against dense infantry formations. By expanding our arsenal of hwachas and deploying them in our armed forces, we can ensure that the terrifying barrage our formidable firepower can unleash is renowned - and feared - across the Far East."
  hwacha_firepower_bonus:0 "火車の火力"
- desc_hwacha_firepower_bonus:1 "火車は、朝鮮が開発した一度に100発の弾の発射を可能とした多連装噴進弾発射装置だ。1592年から1598年にかけて行われた日本の朝鮮出兵の際、要塞の防衛や朝鮮の艦船に搭載、使用されたことが非常によく知られており、また、戦闘時にも使用され、日本の侍の密集陣形を崩すのに威力を発揮した。"
+ desc_hwacha_firepower_bonus:2 "The hwacha is a multiple rocket launcher developed by our engineers capable of firing 100 rockets at a time - devastating against dense infantry formations. Its deployment across our armed forces shall strike fear into the hearts of our enemies!"
  kor_control_yellow_sea_title:0 "黄海の支配"
  kor_control_yellow_sea_desc:1 "中華帝国は黄海の西岸及び北岸を支配しており、それにより朝鮮半島への陸路を脅かしている。もし朝鮮がこの土地の領有を請求できれば、[Root.GovernmentName]の繁栄は飛躍的に増進するだろう。"
  kor_yellow_sea:0 "統一された朝鮮湾"
@@ -389,9 +389,9 @@
  kor_chinese_patronage:0 "皇帝の後援"
  desc_kor_chinese_patronage:0 "天帝の庇護の下、朝鮮は周辺国からの併合を恐れ無しに繁栄できる。"
  kor_fortify_korea_title:0 "北部防壁の再建"
- kor_fortify_korea_desc:1 "チョルリジャンソン、「千里長城」は、11世紀半ばから朝鮮半島北部に広がる要塞群である。満州族に対する防御のために建造され、朝鮮の安全が保障されるよう、常に管理が行き届いた状態にせねばならない。"
+ kor_fortify_korea_desc:2 "The Cheolli Jangseong, or 'Thousand Li Wall', is a network of fortresses across the northern part of the Korean Peninsula built by our forefathers to protect our people against Jurchen depredations. We must make sure it is kept in a good state of repair so as to assure the security of Korea."
  kor_built_the_wall:0 "千里長城"
- desc_kor_built_the_wall:1 "チョルリジャンソン、「千里長城」は、朝鮮半島北部に広がる要塞群であり、満州族に対する防壁として、1033年から1044年にかけて建造された。"
+ desc_kor_built_the_wall:2 "The Cheolli Jangseong, or 'Thousand Li Wall', is a network of fortresses across the northern part of the Korean Peninsula built by our forefathers to protect our people against Jurchen depredations."
  kor_fortify_korea_tooltip:0 "このミッションの条件を満たす州に、人的資源の開発度§Y+2§!と§Y千里長城§!の効果を獲得し、州内要塞防御§G+25%§!が与えられます。"
  kor_fortify_korea_2_title:0 "隠者の王国"
  kor_fortify_korea_2_desc:0 "領土が小さく、中国や日本、満州といった自国より強力な国家（団結時）の間に位置しているので、朝鮮が長年にわたって頻繁に侵略を受けてきたことは、当然のことだ。侵略に対する安全確保の方法は、自国に誰も立ち入れないようにすることだけだ。"
@@ -434,7 +434,7 @@
  kor_end_factional_strife_title:0 "派閥抗争からの解放"
  kor_end_factional_strife_desc:1 "李氏王朝の栄光ある始めの1世紀以後、派閥間の争いが蔓延し、国は弱体化し、分裂した。[Root.Monarch.GetTitle]らは、派閥間の対立を解消できず、生きるか死ぬかの争いが定期的に発生している。残念なことに、一方の派閥が優勢になりそうになるたびに、その派閥は分裂して、下位の派閥が再度入れ替わる。このような派閥争いを抑制し、朝鮮国の統一を復元せねばならない!"
  KOR_has_factional_upheaval_tooltip:1 "イベント§Y宋明理学の台頭§!が発生済みである。"
- kor_end_factional_strife_tt:1 "階級の忠誠補正§Y派閥抗争§!が全階級で削除されます。\n階級の忠誠補正§Y派閥争いの終焉§!が全階級に付与され、月毎の忠誠増加率§G+15%§!を獲得します。\nイベント§Y激高した派閥§!はもはや発生しません。"
+ kor_end_factional_strife_tt:2 "The factional strife that has plagued §Y[Root.GetName]§! will end."
  kor_develop_capital_title:0 "[Root.Capital.GetCapitalName]の拡大"
  kor_develop_capital_desc:0 "朝鮮は田園地方が多く、大都市はほとんどない。実際、隣国の中国の大都市と比較すると、朝鮮最大の都市でさえちょっとした地方都市のようなものだ。大国として真剣に受け止めるのであれば、この情勢は変えねばならない。"
  kor_developed_capital:0 "王の都市"
@@ -448,7 +448,7 @@
  desc_kor_mission_traders:0 "朝鮮が商業の主導権を新たに手にしたことで、朝鮮の交易商は今や、東アジア全域のあちこちで、自身に有利に商取引を進められるようになった。"
  have_no_estates_tooltip:0 "§Y階級§!が存在しない。"
  have_no_estate_land_tooltip:0 "任意の§Y領土§!を保有する§Y階級§!が存在しない。"
- KOR_two_pleased_estates_tooltip:0 "2つの§Y階級§!それぞれにおいて、§Y忠誠70§!以上であり、さらにもう1つが§Y忠誠50§!以上である。"
+ KOR_two_pleased_estates_tooltip:1 "One §YEstates§! has at least §Y60 loyalty§!, the other two have at least §Y40 loyalty§!."
  end_manchuria_tooltip:0 "§Y満州§!地方における各地域において1州以上§Y[Root.GetName]§!もしくは[Root.GetAdjective]の朝貢国以外の従属国が領有している。"
  kor_manchurian_korea:0 "満州の朝鮮人"
  desc_kor_manchurian_korea:0 "三国時代は古くから続いてきたが、我々は領土を再び統一し、朝鮮をかつての栄光に戻した。"
@@ -487,7 +487,7 @@
  flavor_kor.10.t:0 "宋明理学の台頭"
  flavor_kor.10.d:2 "15世紀末から16世紀初めにかけて、李氏朝鮮[Root.GovernmentName]の政治的安定は宋明理学として知られる新しい集団の出現によって崩壊しました。彼らは、国を統治した保守的な両班の上層階級の一部では伝統的になく、地方出身の学者でした。彼らの明白な利点は、[Root.Monarch.GetTitle]が彼らを政府に雇用することを奨励したことです。しかし、彼らの改革思想と両班との土地や地位をめぐる競争は、朝鮮政治における派閥間の衝突頻度を増大させます。"
  flavor_kor.10.opt:0 "それならそれでよい。"
- flavor_kor.10.tt:1 "全階級で忠誠を§R10%§!喪失します。\n全階級で§Y派閥抗争§!補正を獲得し、月ごとの階級の忠誠増加に§R-10%§!の効果が付与されます。\nこの補正はミッション§Y派閥抗争からの解放§!達成でしか削除されません。\n\n朝鮮内では最大§Y3州§!まで§Y宋明理学の改革者§!階級に与えられます。"
+ flavor_kor.10.tt:2 "All estates lose §R10%§! loyalty.\n"
  flavor_kor.11.t:0 "激高した派閥"
  flavor_kor.11.d:0 "[Root.GetKorDHEEstate1]と[Root.GetKorDHEEstate2]の派閥間で、生きるか死ぬかの戦いにまで発展、突入しています。両派閥の指導者たちは、どうも両派の間で裁定を下すために[Root.GetKorFactionReason]が王権を行使しなければならないところまで発展した後、互いに大逆人だと非難しあっています。敵は我々がこうして分裂しているのを見て喜ばなければなりません!"
  flavor_kor.11.A:0 "[Root.GetKorDHEEstate1]を支援せよ！"
@@ -510,7 +510,7 @@
  leadered_peasant_rebels_desc:0 "恐ろしい盗賊の指導者に率いられた農民の反乱軍は、圧政と厳しい課税を十分に受けていた。彼らは装備も訓練も不十分で、主に歩兵構成である。"
  leadered_peasant_rebels_army:0 "農民軍"
  DEVELOPMENT_IN_PROVINCES:0 "領有する州の開発度$DEVELOPMENT$（現在値: $CURRENT|Y$）"
- string_start_korea:1 "§Y李氏朝鮮§!、正式には§Y大朝鮮国§!は、1392年に将軍§Y李成桂§!（後の§Y太祖王§!）のクーデターによって、§Yモンゴル§!や§Y明§!の侵攻による焼け跡の中から生まれました。当初から、太祖は§Y中国の明§!と強い結びつきを持っていました。新国号決定の際、「和寧」と「朝鮮」の選択肢を明に提示し、皇帝の承認を得て決定しました。\n\nこの§Y中国の明§!との密接な関係は、17世紀半ばに明が滅亡するまで続きましたー朝鮮側が従属する形としてですが。§Y儒教§!の信奉者として、朝鮮は中国を朝鮮世界の中心と見ており、李氏朝鮮はある意味で中国以上に中華風であるー「小中国」  となりました。一方で中国側は李氏朝鮮を 「東方の礼儀正しい民の国」 と見ていました。明が§Y天命§!の要求するのに誰もが認める存在であり続ける限り、この強い絆を維持することは発足したばかりの朝鮮王国が生き残っていくのに不可欠です。\n\n§Y李氏朝鮮§!統治の最初の1世紀の成果は非常に大きいものでした。15世紀初頭には、§Y京城§!と§Y六鎮§!の国境地域を§Y女真族§!から奪い、現在の朝鮮が形成している領域に統一できました。学術や学問も盛んでした。特にハングル文字は、1446年に導入されました。ハングル文字は漢字と異なり、簡単に学ぶことができ、朝鮮語に適応しやすいように設計されています。ハングル文字は、はるかに便利に使用できるようになり、社会の幅広い層で学術的文書を読むことができるようになりました。さらに、農学や火薬、法の成文化などの分野で目覚ましい進歩が見られ、領地の地形の調査や記録に大きく力を入れました。\n\nしかし、朝鮮王国にとっての脅威は、国境の内外を問わず存在しています。国内では、朝鮮の農民は貧しいままであり、このまま何もしなければ、§Y農民一揆§!や税収不足が問題となりそうです。さらに、§Y両班§!の上流階級は大部分が団結していますが、この見せ掛けに亀裂はすでに浮かび始めており、いつでも§Y派閥抗争§!が勃発する可能性があります。\n\n対外的な脅威が多く存在しています。北部では、好戦的な§Y女真族§!が待ち構えていますー目下、分裂していますが、万が一強力な指導者の下で統一されたなら、朝鮮侵略が急速に進むかもしれません。同じく、海を越えた東には、戦いに明け暮れる§Y大名§!と自称§Y将軍§!の国家、§Y日本§!がいます。統一された日本が朝鮮海の狭い海峡を越えて勢力を拡大しないよう、用心せねばなりません。最後に、朝鮮は§Y明帝国§!の影に隠れていますが、龍を起こす李氏朝鮮の世子に災いあれ!"
+ string_start_korea:1 "The §YJoseon Kingdom of Korea§!, officially the §YKingdom of Great Joseon§!, emerged from the ashes of §YMongol§! and §YMing§! invasions via a coup d'état by General §YYi Seonggye§! (later known as §YKing Taejo§!) in 1392. From the start, Joseon Korea's connection to §YMing China§! was strong: When settling on a name for the new kingdom, Taejo submitted the options 'Hwaryeong' and 'Joseon' to Ming and decided on the latter after its endorsement by the Emperor.\n\nThis close connection to §YMing China§! was to remain until the downfall of the Ming in the mid-17th century - as was Korea's subordinate status in the relationship. As followers of §YConfucianism§!, Koreans viewed China as being at the heart of the Korean world, and Joseon Korea came to be in some ways even more sinicized than China itself - a 'little China'. For their part, the Chinese viewed Joseon Korea as the 'country of courteous people in the East'. For as long as Ming remains the undisputed claimant to the §YMandate of Heaven§!, the maintenance of these strong bonds will remain vital to the survival of the fledgling Korean kingdom.\n\nThe achievements of the first century of §YJoseon§! rule were considerable. In the early 15th century, the border regions of §YGyeongseong§! and §YYukjin§! were taken from the §YJurchens§!, allowing the Koreans to unite the territory which would form modern-day Korea. There was also a flourishing of academia and knowledge. In particular, the hangeul alphabet was introduced in 1446. Unlike the Chinese alphabet, it was designed to be both easy to learn and easy to adapt to the Korean language, making its use far more convenient and allowing a far broader section of society to read scholarly texts. Further notable progress was made in the fields of agriculture, gunpowder and the codification of the law, and major efforts were made to survey and record the geography of the land.\n\nHowever, threats to the Korean kingdom remain from both within and beyond its borders. At home, Korea's peasants remain poor, and both §Ypeasant uprisings§! and insufficient tax receipts are likely to become a problem if nothing is done to rectify the situation. Furthermore, although the upper class of §Yyangban elites§! has for the most part been united, the cracks in this façade are already beginning to show and could erupt into §Yfactional strife§! at any time.\n\nOn the foreign front lie threats aplenty. To the north await the warlike §YJurchens§! - although presently divided, should they come to be unified under a strong leader, an invasion of Korea might follow swiftly. Similarly, across the sea to the east lies §YJapan§!, a nation of warring §Ydaimyos§! and would-be §Yshoguns§!. Korea must be vigilant, lest a united Japan seek to expand its power across the narrow channel of the Korean Sea. Finally, although Korea basks in the shadow of the §YMing Empire§!, woe betide the Joseon prince who wakes the dragon!"
  string_start_jurchens:1 "漢民族は、§Y女真族§!が団結した際の危険性をよく知っています。12世紀、女真族の将軍§Y阿骨打§!は、女真族を統一させ、§Y遼§!に蜂起し、§Y金§!国を設立し、自らを§Y太祖皇帝§!と名乗りました。§Y明§!王朝は再び女真族が蜂起しないよう願っており、どの一族も力を持ちすぎないよう彼らがその一族間で戦い続けるように措置を講じています。この目的のために、明は§Y建州§!と§Y海西§!の女真族に対して緩い宗主の立場を確立しました。\n\n女真族の中で、建州女真は群を抜いて強力です。海西と同様、彼らは定住民族です。中国支配の制度や思想が徐々にこの地方へ浸透し、現地の漢民族に受容されつつあります。\n\n中国の支配や慣習に侵食されているにもかかわらず、定住した女真族は、北方の 「野生の女真族」 の伝統と戦士文化のほぼ同じものを持ち続けています。§Y野人§!、§Y兀狄哈§!、§Y東海§!の遊牧民族は決して非力ではなく、互いに戦いあわねばならず、§Yソロン§!族と§Yニブフ§!族は相対的に孤立しています。\n\n§Y朝鮮§!は度々女真族と対立しており、最近になって、建州女真の氏族から東北地方の§Y六鎮§!と§Y京城§!を併合しました。女真族も朝鮮人も§Y白頭山§!を聖地と捉えており、互いに自分たちだけが神聖なる山頂を訪れることができると信じています。\n\n女真族と§Yモンゴル族§!の関係性は絶えず変化しています。時には盟友、時には恨み重なる相手であり、双方の民族の部族が政治的な関係確保のためにしばしば結婚し、王家同士の確執も見られます。§Yウネボラト・ハン§!配下の§Yホルチン§!のモンゴル族は東部で支配的な存在になり、もし封じ込めされなければ、女真族の領地への拡大に目を向けるかもしれません。\n\n女真族は金の時代を懐かしく思い出します。もし彼らが部族間の分裂を克服し、モンゴル族を寄せ付けないことができれば、彼らは新しい指導者の下で再び立ち上がり、明を打ち負かし、自ら新しい独自性を作り上げることができるでしょう。"
  chahar_area:0 "チャハル"
  cicigar_area:0 "チチガル"
@@ -518,7 +518,7 @@
  flavor_oir.8.d:1 "オイラト部族連合が崩壊したことで、その構成部族の多くが分離し、新しい独自性を形成しました。これらオイラトの最大集団はジュンガルであり、彼らは牧草地として天山山脈北部の広い地域を主張しています。彼らが[Root.GetName]に脅威を与えるかどうかはまだはっきりとしません。"
  flavor_oir.8.a:0 "彼らが平和的であることを願うとしよう。"
  devastate_china_tooltip:0 "[Root.GetName]が占領しているが領有していない§Y中国§!圏で、開発度§Y25§!以上であり、§Y20§!以上の荒廃の州が1州以上存在する"
- establish_tributaries_tt:0 "§Y10§!以上の朝貢国を持つ"
+ establish_tributaries_tt:1 " countries are Tributaries of §Y[Root.GetName]§!"
  xilin_gol_area:0 "シリンゴル"
  restore_yuan_tt:90 "§Y華北§!地方の少なくとも§Y20§!の州が[Root.GetName]によって領有され中核州になっている"
  reconquer_china_tt:0 "§Y西南§!または§Y華南§!地方の少なくとも§Y40§!の州が[Root.GetName]によって領有されている"
@@ -647,8 +647,8 @@
  KOR_has_factional_upheaval_tooltip2:1 "イベント§Y第三の士禍§!が発生済みである。"
  is_rivalled_by_root:0 "§Y[Root.GetName]§!からライバル指定されている。"
  have_at_least_7point5_more_discipline:1 "規律が§G107.5%§!以上である"
- TOTAL_OWN_AND_NON_TRIBUTARIES_DEVELOPMENT_AT_LEAST:0 "自国と朝貢国以外の従属国の合計開発度が$VAL|Y$以上である。\n"
- TOTAL_OWN_AND_NON_TRIBUTARIES_DEVELOPMENT_LESS_THAN:0 "自国と朝貢国以外の従属国の合計開発度が$VAL|Y$未満である。\n"
+ TOTAL_OWN_AND_NON_TRIBUTARIES_DEVELOPMENT_AT_LEAST:1 "Total own and non-tributary subject development is at least $VAL|Y$ (Currently $CURRENT|0Y$).\n"
+ TOTAL_OWN_AND_NON_TRIBUTARIES_DEVELOPMENT_LESS_THAN:1 "Total own and non-tributary subject development is less than $VAL|Y$ (Currently $CURRENT|0Y$).\n"
  new_mandate_holder:0 "新王朝"
  desc_new_mandate_holder:0 "天朝の秩序を回復したので、我が王朝は新しき臣民の間で人気の波に乗っている。"
  waging_war_for_china:0 "天朝が為の戦争"
@@ -743,3 +743,13 @@
  shun_from_sticks_to_guns_desc:0 "我が軍は、至近距離武器利用も遠距離武器利用も訓練を行ってきた。棒や剣、ナイフ、弓、銃を使いこなすことに長けている我が兵は、必要とするあらゆる役割を果たすことができる。彼らの多才さは戦場を支配する能力を我々にもたらす。"
  shun_claim_to_the_mandate:0 "天命の請求"
  shun_claim_to_the_mandate_desc:0 "我が王朝は卑しい身分を起源とするが、強さと正義を通して貴族も庶民も味方につけた。今や我々は、中国の地を支配する正統王朝である天命の正統なる請求者とみなされている。"
+ furdan_area_name:0 "Furdan"
+ furdan_area_adj:0 "Furdan"
+ sakhalin_area_name:0 "Sakhalin"
+ sakhalin_area_adj:0 "Sakhalin"
+ chahar_area_name:0 "Chahar"
+ chahar_area_adj:0 "Chahar"
+ cicigar_name:0 "Cicigar"
+ cicigar_adj:0 "Cicigar"
+ xilin_gol_area_name:0 "Xilin Gol"
+ xilin_gol_area_adj:0 "Xilin Gol"
