--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -7,7 +7,7 @@
  LEADS_TRADE_LEAGUE:0 "貿易同盟を主導"
  ANOTHER_MAX_STATE:0 "別の国家を許可する"
  GOV_MAX_STATES:0 "最大国家：$NUM$"
- MAX_STATE_TITLE_TECH:0 "ステートの数"
+ MAX_STATE_TITLE_TECH:1 "Governing Capacity"
  MAKESTATE_NOT_CORE:0 "$NAME$は中核州ではない。\n"
  STATE_MAINTENANCE_MODIFIER:0 "ステート維持費"
  ECONOMY_STATE_MAINTENANCE_DRO:0 "首都以外の州の維持費は毎月支払われる。これは開発度と首都への距離に基いている。"
@@ -71,7 +71,7 @@
  ICON_TRADELEAGUEINVITE:0 "貿易同盟に参加するよう§Y招待§!"
  ICON_TRADELEAGUEREQUEST:0 "あなたの貿易同盟への参加の§Y要求§!"
  ICON_REQUESTSHAREMAP:0 "$REGION$地方の地図共有の§Y要望§!"
- AUTO_DUE_TO_MOD:0 "以下の要因により§Y$VAL$%§!未満にすることはできません：\n$WHAT$"
+ AUTO_DUE_TO_MOD:1 "$WHAT$"
  MODIFIER_YEARLY_CORRUPTION:0 "年間汚職"
  CORRUPTION_IRO:0 "§Y汚職§!\n現在：$CURR|Y$\n汚職は以下の要因により毎年$CHANGE$変化します：\n$WHY$"
  CORRUPTION_DRO:0 "汚職レベルにより以下の効果："
@@ -260,7 +260,7 @@
  corruption_event.6.a:0 "調査し、すぐに置き換える。"
  corruption_event.6.b:0 "彼らを引退させよう、彼らは過去によく役立ってくれた。"
  corruption_event.7.t:0 "腐敗した顧問"
- corruption_event.7.d:0 "[Root.GetName]は汚職に悩まされているかもしれないが、我々は少なくとも[Root.Monarch.GetTitle]に最も近いものが、確実に信頼できることを保証しようとしている。試したところ、[Root.Monarch.GetName]の顧問の一人が、最近政府に大きな影響を与えている人々から大きな賄賂を獲得し、政府に彼らの利益を促進するため偏向した助言を行っていた。我々はこの裏切りにどのように対応するべきだろうか？"
+ corruption_event.7.d:1 "[Root.GetName] may be plagued by corruption, but we try to ensure that those closest to the [Root.Monarch.GetTitle] can be trusted, at the very least. Try and fail, it seems, since one of [Root.Monarch.GetName]'s advisors, [Root.GetEventAdvisorName], was recently caught taking large bribes from people already wielding great influence in our country to provide the government with advice slanted to advance their interests. How shall we respond to this betrayal?"
  corruption_event.7.a:0 "公にこれらの嘘を暴露し、処刑の準備をする。"
  corruption_event.7.b:0 "自宅に軟禁し静かな引退を手配する。"
  corruption_event.7.c:0 "戒告。偏向した助言でも助言には変わりない。"
@@ -293,14 +293,14 @@
  corruption_event.15.d:0 "腐敗した統治は、それ自体を維持するためにはあまり動かず、構成員を維持するためにより多く動く。その結果、崩壊が始まると、ほとんどの役人の即時の反応は、敗れそうな形成のもの全てを守るのではなく、続く可能性のあるものをつかむことである。\n\n[Root.GetName]は最も下位の役人から[Root.Monarch.GetTitle]に最も近い役人に至るまでの深刻な汚職がいくつかの重要な政府機能を腐食させ、国家の不安定化を広げた。我々がこの対価をすべて支払うのはまだまだ先のことである。"
  corruption_event.15.a:0 "これを継続することはできない。"
  corruption_event.16.t:0 "傭兵たちが地元民を脅迫"
- corruption_event.16.d:0 "戦争中、傭兵たちは、戦闘のために送られた土地を襲撃することで支払いを受けるよりも、彼らが故郷に戻る方法をしばしば見つけ出す。通常、これは敵を恐怖に陥れるため海外に送られたときに問題にならないが、時には平時でさえこの習慣を破るのが難しい場合もある。[Root.GetName]の一部の農民や旅行者たちは、ここに駐屯している傭兵が、戦争が進行中ではないにもかかわらず、あるいはむしろそのせいかもしれないが、彼らから略奪し奪い取っていると訴えている。\n\n我々が雇ったものでさえ、傭兵の階級との仲介は、常に難しい問題である。彼らの告発者は、我々がそれを大目に見ればさらに問題を大きくすることはないだろうが、我々がそれを許し続ければ、我々の社会がどのように変わっていくのかという疑問は残ったままになる。"
+ corruption_event.16.d:1 "During wartime, soldiers of fortune often find ways to make it home with a bit more than they are paid by raiding the land where they are sent to fight. Normally, this is not a problem for us when they are sent abroad to terrorize our enemies, but sometimes this habit is hard to break, even during peacetime. Some farmers and travelers in [hired_mercs_victim_area.GetAreaName] have complained that the [hired_merc_band.GetName], a mercenary band in our employ stationed there, have been robbing and extorting them, despite - or perhaps because of - the fact that there isn't even a war ongoing.\n\nMeddling in the ranks of mercenaries, even ones that we hired, is always a difficult matter. Their accusers are unlikely to take the matter further if we let it slide, but the question remains as to how our society will change if we allow such extortion to continue."
  corruption_event.16.a:0 "そのような凶悪な傭兵階級を追放する。"
  corruption_event.16.b:0 "それは我が国が彼らの奉仕に支払う対価の一部だ。"
  corruption_event.17.t:0 "無能な統治者"
  corruption_event.17.d:0 "政府組織の問題は決して[Root.Monarch.GetName]の強みではなかった。このような既知の弱点を補うために優れた指導者がするのは、委任することである。これはまさに我々の[Root.Monarch.GetTitle]が行ったことであるが、[Root.Monarch.GetHerHis]の地位で行政を担当した人々は、誠実さ以上に優秀であることを証明している。政府は十分に機能しているが、これらの大切な恩恵を与えてくれる役人たちが重要であると見出した事項に向けて優先順位はゆっくりと変化する傾向にある。\n\n[Root.Monarch.GetName][Root.Monarch.GetHerselfHimself]が問題の複雑さを完全に把握することができないため、罪を犯した当事者を容易に見出したり公職から除くことはできない。今のところ、我々は単にその成り行きに苦しむ必要がある。"
  corruption_event.17.a:0 "残念なことに、その能力と名誉は必ずしも両立しない。"
  corruption_event.18.t:0 "過剰拡大の利用"
- corruption_event.18.d:0 "[Root.GetAdjective]国境の急速な拡大は大きな幸運だが、新しい統治上の課題をもたらす。楽天主義の言葉に精通しているすべての人が知っているように、「挑戦」は「問題」の甘みを持つ言葉である。我が国はまだ新しい広がりに対して完全には調整されておらず、これらの新しい掘り出し物における混乱と、法律の貧弱な施行に気づいた人々は、利益を享受している。\n\nこの無法状態は、最終的には通り過ぎるかもしれないが、一時的な統治は未来のための不安定な基盤を構築したように見える。現在の状況で形成された不信を、我々の社会から取り除くには時と金がかかるだろう。"
+ corruption_event.18.d:0 "The rapid expansion of the [Root.GetAdjective] borders is most fortunate, but brings with it new administrative challenges. As every person familiar with the optimistic language knows, "challenges" is the sweeter-tasting word for "problems". Our country has not fully adjusted to its new extent yet, and people who have noticed the confusion and poorly enforced law in these new acquisitions are reaping the benefits.\n\nThis lawlessness may eventually pass, but the temporary administrations appear to have built an unstable foundation for the future. It will take time and money to rid our society of the distrust forming in the present situation."
  corruption_event.18.a:0 "我々は最善の方法で適応する必要がある。"
  corruption_event.19.t:0 "$TRADER$は腐敗した人脈を持つ"
  corruption_event.19.d:0 "我々は、不正行為なしに統治を続けようとしているが、彼らがどこかで得た友人や人脈について常に責任をもつことはできない。$TRADER$は残念なことに、これから続く問題の良い見本であることが判明し、熟練していて親切ではあるが、$TRADER_POSS_PRONOUN$の仲間の選択においていくぶん騙されやすいようだ。\n\n最近の調査では、我々の交易網の多くが賄賂、密輸、その他の疑わしい活動に頼って現在の効率性を達成していることが明らかになった。$TRADER$はこれについて知らないと主張しているが、それはおそらく本当だろう。それにもかかわらず、我々がこれを公開することで終了することを決断する場合、責任は$TRADER_POSS_PRONOUN$が負うことになる。"
@@ -379,11 +379,11 @@
  refused_to_take_sides:0 "味方することを拒否した"
  allowed_papal_league_advisor:0 "同盟において教皇顧問を許可した"
  espionage_events.1.t:0 "忠誠を半分に、諜報員を2倍に"
- espionage_events.1.d:0 "諜報機関は、自分の国への忠誠心のための最も難しい試験かもしれない。恐怖と誘惑の両方が絶えず諜報員を取り囲み、彼らがしていることが上手くなるほど、彼らはより確実にそれに直面することになる。これらの誘惑はもちろん、外国人の諜報員が喜んで提供するものである。\n\n最近、汚職が蔓延している国の諜報員は、これらの誘惑の一つに屈することを決断した。ほとんどの人が賄賂を通じて得ることができるよりも大きな利益を得ることを熱望している彼は、我々のために二重の諜報員として行動することを提案している。しかし、彼が選んだ「匿名の」連絡方法は、予想以上に匿名ではないことが判明したため、今では我々は彼の名前を知っている。我々はどう進めていくべきだろうか？"
+ espionage_events.1.d:1 "Espionage may be the hardest test there is for loyalty to one's country. Both fear and temptations surround spies constantly, and the better they are at what they do, the more certain they are to face them. These temptations, of course, are something we are more than willing to provide foreign agents.\n\nAn agent from [espionage_event_country.GetUsableName], a country where corruption is rampant, has recently decided to give in to one of these temptations. Eager to make a bigger profit than most can hope to earn through bribes, he has offered to act as a double agent for us. However, the 'anonymous' method of contact he chose has turned out to be less anonymous than expected, so we now know his name. How shall we proceed?"
  espionage_events.1.a:0 "より少ない金額で提案を受け入れ、彼の命を助ける。"
  espionage_events.1.b:0 "彼が事故に遭うまで、数日間彼を尾行しろ。"
  espionage_events.2.t:0 "裏切り者のための二度目の機会"
- espionage_events.2.d:0 "我々は、[Root.GetAdjective]社会を襲う汚職を意識した以上に、市民の間を超えてその金の持ち主が変わらないことを、少なくとも望んでいた。我々は間違っていた。[From.GetName]に諜報網を維持している諜報員の仲間が、最近[From.GetAdjective]政府からもたらされた可能性のある金額を受け取ったことが判明した。我々の最良の者が、我々が望んでいたほど忠実ではなかったという事実を受け入れる必要がある。\n\nこの操作はまだ救済されるかもしれないと言う者もいる。彼の裏切りの証拠に立ち向かった場合、彼は[From.GetAdjective]の信頼を得るという追加の恩恵を得て、元の忠誠に戻る準備ができているかもしれない。それは危険を冒すことに値するだろうか？"
+ espionage_events.2.d:0 "We are more than aware of the corruption plaguing [Root.GetAdjective] society, but we had at least hoped that it didn't go beyond money changing hands between our own citizens. We were wrong. Associates of an agent maintaining our spy network in [From.GetUsableName] have proven recently that he has accepted a sum of money that could only have come from the [From.GetAdjective] government. We have to accept that one of our best was not as loyal as we hoped.\n\nSome say that this operation may be salvaged yet. If confronted with evidence of his betrayal, he might be ready to switch back to his original allegiance - with the added benefit of having the trust of the [From.GetAdjective]. Is it worth the risk?"
  espionage_events.2.a:0 "彼は今、我々にとってさらに価値があるだろう。"
  espionage_events.2.b:0 "彼は既に十分な打撃を受けている。最後に彼を家に招待しよう。"
  espionage_events.3.t:0 "二度目の裏切り？"
@@ -393,11 +393,11 @@
  espionage_events.3.tt_2:0 "諜報員がまだ我々に忠実であれば："
  espionage_events.3.b:0 "彼は再び彼らを騙したのか？彼はかなり良いな。"
  espionage_events.4.t:0 "告白の印"
- espionage_events.4.d:0 "宗教的な制度は、宗教的なものではなく、国や諜報員の細かい陰謀や策略の上にあると考えられている。彼らに潜入することが重要な理由である。大声で話されることのない多くの秘密は、告白の実践が制度に変わったという宗教権威に秘密裏に伝えられている。\n\n諜報員活動に焦点を当てた国の一つの教会はこれを利用する前例のない機会を提示した。地方の修道院で修道僧の姿をしている我々の忠実な諜報員の一人は、教会で家事をしている間に彼女が懺悔の会話を盗み聞きできることを発見した。彼女は発覚を逃れる可能性が高いが、発見されれば宗教権威を怒らせるだろう。我々はそれに賭けてみる価値はあるだろうか？"
+ espionage_events.4.d:1 "Religious institutions are considered sacrosanct and above the petty plots and schemes of countries and spies. This is why it's crucial to infiltrate them. Many secrets that would never be spoken aloud are told in confidence to religious authorities, which the practice of confession has even turned into an institution.\n\nA church in [victim_country.GetUsableName], a country on which we have focused our espionage efforts, has presented an unprecedented opportunity to exploit this. One of our loyal agents, posing as a nun in a local convent, has found that she can overhear the conversations from confessionals while doing chores in the church. While she is likely to escape detection, the plan would outrage religious authorities if discovered. Is it worth taking our chances?"
  espionage_events.4.a:0 "もし彼らを赦すことができなくても、彼らの罪は興味深いかもしれない…"
  espionage_events.4.b:0 "考えられない！彼女は司祭にそれらが聞こえることを知らせるべきだ。"
  espionage_events.5.t:0 "教皇は陰謀を明らかにした"
- espionage_events.5.d:0 "外国における情報収集を改善するため懺悔を行う者からの情報を利用する我々の計画は、我々の諜報員が数ヶ月で発見されたことで、教皇庁との外交的な国難をもたらした。教会の怒りに直面して、彼女はその後、彼女の所持品と共に修道院から姿を消した。これが彼女自身の行為であろうと敵の行動であろうと、我々は決して知られることはない。\n\nしかし、我々は、教会が我々が背後で何をしていたのかを理解するのに十分なことを発見したと確信している。教皇は、このように教会とその慣行を悪用することに衝撃を受けた。[Root.Monarch.GetTitle]はいくつかのもっともらしい否認を持っているが、国の立場は依然として不可逆的な傷を負っている。"
+ espionage_events.5.d:1 "Our plan to use information from confessionals to improve our intelligence gathering in [victim_country.GetUsableName] has resulted in a diplomatic disaster with the Papacy, as our agent was discovered a few months into the operation. Facing the wrath of the church, she has since disappeared from the convent along with her belongings; whether this is her own doing or the actions of the enemy, we may never know.\n\nWe can be certain, however, that the church found out enough to realize we were behind what happened. The Pope is shocked that we would exploit the church and its practices in this way. The [Root.Monarch.GetTitle] enjoys some plausible deniability, but the country's standing is still irreversibly harmed."
  espionage_events.5.a:0 "許しを求めるには遅すぎるか？"
  espionage_events.6.t:0 "治世を終了する機会"
  espionage_events.6.d:0 "国際政治を担当する多くの人は、国家元首を迅速に取り替えることを望んでいるが、それを実現させるのは簡単ではない。国家に被害を与えることはよく知られており、多くの国が政府の安全保障をチェスのゲームのように扱い、国王を守ることが何よりも優先される。\n\n世界が本当にチェス盤だとすれば、我々は現在対戦相手をチェックメイトしている。我々の海外の特別な諜報網は、我々に外国の指導者の人生を終わらせる機会を与えてくれた。行動が完了した後で、彼らは我々を追跡できるようになるだろうが、その時にはもう手遅れだ。"
@@ -407,17 +407,17 @@
  espionage_events.7.d:0 "[From.GetAdjective]の暗殺者は、印象的な人脈網であったに違いないものを利用し、国際的な信用に違反する言い表わせないほどの罪を犯した。彼らは我々の[Root.Monarch.GetTitle]を殺害したのだ。犯人が捕まったにもかかわらず、殺害を命じた者どもは[From.GetName]で安全に暮らしている可能性が非常に高く、我が国に彼らの陰謀を続けるための準備ができている。政府が衝撃から回復次第、[Root.GetName]のこれらの敵を攻撃する方法を考える必要がある。"
  espionage_events.7.a:0 "何という不名誉な一撃だ！"
  espionage_events.8.t:0 "$SPYMASTER$は隣国に疑いをかける"
- espionage_events.8.d:0 "密偵頭を雇用することで、主に海外での情報収集に貢献してきたが、$SPYMASTER$は時には防諜活動を調整することもある。最近、$SPYMASTER_POSS_PRONOUN$の調査により、近隣諸国の一つだけが実行可能な陰謀が発見された。どの隣国が背後にいるのかは不明だが、情報の交換には、その背後にいる者たちが近くにいることが必要である。\n\n$SPYMASTER$は、関与した可能性のある多くの外国の関係者を集めて厳しく尋問する準備をしているが、犯人についての矛盾する理論は、誰を目標とするかの決断を[Root.Monarch.GetTitle]に委ねている。隣国はおそらく告発を感謝しないだろうが、何かをする必要があり、それは急ぐ必要がある。"
+ espionage_events.8.d:1 "Having a spymaster in our employ has mainly contributed to our intelligence gathering abroad, but our Spymaster $SPYMASTER$ sometimes coordinates counterespionage as well. Recently, $SPYMASTER_POSS_PRONOUN$ investigations have uncovered a conspiracy that could only be the work of one of our neighboring countries. Which neighbor is behind it remains unclear, but the constant exchanges of information would require those behind it to be close by.\n\n$SPYMASTER$ has prepared to round up and harshly question a number of foreign officials who might be involved, but conflicting theories about the culprits leaves it up to the [Root.Monarch.GetTitle] to decide who to target. Our neighbors will probably not appreciate the accusations, but something needs to be done, and fast."
  espionage_events.8.a:0 "多くの可能性のある容疑者のうち、一つは…"
  espionage_events.8.b:0 "…またはこの一つが最も可能性が高いようだ"
  espionage_events.9.t:0 "我々の同盟内での秘密"
- espionage_events.9.d:0 "大使や外交使節は、諜報員、あるいは少なくとも正直な交渉をするはずの国家において情報を収集するために職務を超えた情報提供者の二つの顔を持つ。これは、[Root.Capital.GetName]において大使が諜報活動に関与している疑いがあることで驚くには値しない。現在の課題は、徹底的な追求だけで有罪を確かめることができたため、この発見を巧みに扱うことにある。"
+ espionage_events.9.d:1 "Ambassadors and diplomatic envoys often double as spies, or at least informants who go beyond their duties to gather information in the country where they are supposed to do honest negotiations. This makes it less than surprising that the [spying_ambassador.GetAdjective] ambassador here in [Root.Capital.GetName] has been suspected of involvement in espionage. The challenge now lies in tactfully handling this discovery, since only a thorough cross-examination could ascertain guilt."
  espionage_events.9.a:0 "我々はこの真相を探る必要がある。大使を逮捕しろ。"
  espionage_events.9.b:0 "彼を置き換えるよう要求を送る。"
  espionage_events.9.c:0 "重要な業務から彼を切り離そうとするだけだ。"
  espionage_events.9.c.tt:0 "[spying_ambassador.Country.GetName]は§Y50%§!の確率で[Root.Country.GetName]の諜報網に10を追加します。"
  espionage_events.10.t:0 "大使の告白"
- espionage_events.10.d:0 "逮捕され、彼の地位の快適さが取り除かれると、諜報行為に加担している疑いのある大使はすぐに尋問の下で罪を認めた。さらに、彼の自白は、彼が参加していた諜報網が、以前に疑われたよりもはるかに広がっていたことを示している。これは確かに彼の母国を当惑させるものであり、すぐに大使を帰国させることで、我々に状況を平和的に解決するよう要請している。\n\n外交官を殺したり投獄したりしないことは良い慣習だが、この男は自身を我が国の敵であると証明している。さらに重要なことに、彼はまだ私たちにとって価値のある情報を持っている可能性もある。我々は状況を円滑にするため彼を手放すべきだろうか？"
+ espionage_events.10.d:1 "Once arrested and removed from the comfort of his station, the ambassador we suspected of being complicit in espionage quickly admitted his guilt under interrogation. What's more, his confession indicates the spy network he was part of was more far-reaching than previously suspected. While this is certainly an embarrassment for [spying_ambassador.GetUsableName], they are requesting we resolve the situation amicably by sending the ambassador home immediately.\n\nWhile it's good praxis not to kill or imprison diplomats when it can be avoided, this man has proven himself to be an enemy of our nation. More importantly, he could still have information that is of value to us. Should we let him go to smooth over the situation?"
  espionage_events.10.a:0 "いや。圧力をかけて屈する敵の諜報員は、貴重な情報源だ。"
  espionage_events.10.b:0 "我々はお互いすべての諜報員だ。我々は赦し、忘れることができる。"
  counterintelligence_operation:0 "防諜操作"
@@ -441,7 +441,7 @@
  SPY_OFFENCE_DESC_RIVAL:0 "ライバル：$VAL|%2+=$"
  SPY_OFFENCE_DESC_DISTANCE:1 "距離乗数：x$VAL|Y$"
  SPY_OFFENCE_BASE:0 "基本速度：$VAL|Y$"
- EST_IS_TERRITORIAL_CORE:0 "州はテリトリーの中核州です"
  religious_turmoil_timelimit_tt:0 "§Y宗教的混乱§!を25年間保持していた"
  custom_idea_slave_raiders:1 "沿岸の襲撃者"
  custom_idea_slave_raiders_desc:1 "我が国は、船員や金といった必要なものを得るために、海岸線を襲撃してきた長い伝統を誇っています。"
+ AUTO_HEADER:0 "Cannot be lower than §Y$VAL$%§! due to:\n$WHAT$"
