--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -708,7 +708,7 @@
  IDEA_SETUP:0 "任意のアイデアを獲得した時"
  IDEA_HEADER:0 "$MESSENGER$"
  IDEA_1:0 "$TYPE$を拡張!"
- IDEA_2:0 "$TITLE$、我々は$TYPE$グループのアイデアを獲得しました"
+ IDEA_2:1 "We unlocked an idea in $TYPE$"
  IDEA_3:0 "$NAME$"
  IDEA_4:0 "$DESC$"
  IDEA_5:0 "ボーナス効果："
@@ -749,8 +749,8 @@
  KNOWLEDGE_SHARING_5:0 "$RESULT$することを決断したという$TYPE$知らせを受けました。"
  KNOWLEDGE_SHARING_6:0 "$EFFECT$"
  KNOWLEDGE_SHARING_LOG:0 "$ACTOR$は今や$WHO$と知識を共有しています。"
- KNOWLEDGE_SHARING_BTN1:0 "素晴らしい"
- KNOWLEDGE_SHARING_BTN2:0 "素晴らしい"
+ KNOWLEDGE_SHARING_BTN1:1 "OK"
+ KNOWLEDGE_SHARING_BTN2:1 "OK"
  KNOWLEDGE_SHARING_BTN3:0 "移動"
  FLEETBASING_TITLE:0 "港湾使用権を得た"
  FLEETBASING_SETUP:0 "国家が港湾使用権を付与する時"
@@ -3233,7 +3233,7 @@
  WEMILALLDISHONOUR_2:0 "$MONARCHTITLE$、我々は宣戦布告された次の国"
  WEMILALLDISHONOUR_3:0 "$ACTOR$"
  WEMILALLDISHONOUR_4:0 "に対して、現時点で関与しないことを決定しました。"
- WEMILALLDISHONOUR_6:0 "我々は、彼らにこの戦争は彼ら自身の問題だと伝えることに大きな喜びを感じました。"
+ WEMILALLDISHONOUR_6:1 "We have taken great delight in telling them that they are on their own for this war.$FAITH$"
  WEMILALLDISHONOUR_LOG:0 "我々は$ACTOR$との同盟を履行しませんでした。"
  WEMILALLDISHONOUR_BTN1:0 "OK"
  WEMILALLDISHONOUR_BTN2:0 "OK"
@@ -3724,7 +3724,7 @@
  OCCUPATIONOVER_SETUP:0 "無防備の州を占領した時"
  OCCUPATIONOVER_HEADER:0 "$MESSENGER$"
  OCCUPATIONOVER_1:0 "$WINNER$は$PROV$を占領しました"
- OCCUPATIONOVER_2:0 "$MONARCHTITLE$、$PROV$は"
+ OCCUPATIONOVER_2:0 "$MONARCHTITLE$, $PROV$ has been occupied by"
  OCCUPATIONOVER_3:0 "$WINNER$の占領下になりました"
  OCCUPATIONOVER_4:0 "$WETHEY$は今、その州を支配しています。"
  OCCUPATIONOVER_LOG:0 "$WINNER$は$PROV$を占領しました。"
@@ -6981,3 +6981,72 @@
  MINORITY_EXPULSION_CANCELED_BTN1:0 "呪われろ！"
  MINORITY_EXPULSION_CANCELED_BTN2:0 "呪われろ！"
  MINORITY_EXPULSION_CANCELED_BTN3:0 "移動"
+ BANKLOAN_4:0 "$ESTATE_INFO$"
+ DECIMPERIALREALMWARWITHUS_TITLE:0 "Emperor calls for Reichskrieg"
+ DECIMPERIALREALMWARWITHUS_SETUP:0 "When the Emperor calls for Reichskrieg against the Empires enemies."
+ DECIMPERIALREALMWARWITHUS_HEADER:0 "Herald from"
+ DECIMPERIALREALMWARWITHUS_1:0 "$ACTOR$"
+ DECIMPERIALREALMWARWITHUS_2:0 "in their power as Emperor have declared"
+ DECIMPERIALREALMWARWITHUS_3:0 "a Reichskrieg against us"
+ DECIMPERIALREALMWARWITHUS_4:0 "and now have 5 years to prepare the war"
+ DECIMPERIALREALMWARWITHUS_LOG:0 "$ACTOR$ have declares a Reichskrieg!"
+ DECIMPERIALREALMWARWITHUS_BTN1:0 "OK"
+ DECIMPERIALREALMWARWITHUS_BTN2:0 "OK"
+ DECIMPERIALREALMWARWITHUS_BTN3:0 "Go to"
+ DECIMPERIALREALMWARWITHOTHER_TITLE:0 "Emperor calls for Reichskrieg"
+ DECIMPERIALREALMWARWITHOTHER_SETUP:0 "When the Emperor calls for Reichskrieg against the Empires enemies."
+ DECIMPERIALREALMWARWITHOTHER_HEADER:0 "Herald from"
+ DECIMPERIALREALMWARWITHOTHER_1:0 "$ACTOR$"
+ DECIMPERIALREALMWARWITHOTHER_2:0 "in their power as Emperor have declared"
+ DECIMPERIALREALMWARWITHOTHER_3:0 "a Reichskrieg against $RECIPIENT$"
+ DECIMPERIALREALMWARWITHOTHER_4:0 "and now have 5 years to prepare the war"
+ DECIMPERIALREALMWARWITHOTHER_5:0 ""
+ DECIMPERIALREALMWARWITHOTHER_6:0 "This surely will shake up Europe..."
+ DECIMPERIALREALMWARWITHOTHER_LOG:0 "$ACTOR$ have declared a Reichskrieg against $RECIPIENT$!"
+ DECIMPERIALREALMWARWITHOTHER_BTN1:0 "OK"
+ DECIMPERIALREALMWARWITHOTHER_BTN2:0 "OK"
+ DECIMPERIALREALMWARWITHOTHER_BTN3:0 "Go to"
+ REVOLUTION_SPREAD_TITLE:0 "Revolutionary Ideas Spread"
+ REVOLUTION_SPREAD_SETUP:0 "When revolutionary ideas spread to our provinces."
+ REVOLUTION_SPREAD_HEADER:0 "$MESSENGER$"
+ REVOLUTION_SPREAD_1:0 "Revolutionary Ideas Spread"
+ REVOLUTION_SPREAD_2:0 "$MONARCHTITLE$, the Center of Revolution in"
+ REVOLUTION_SPREAD_3:0 "$REVCENTER$"
+ REVOLUTION_SPREAD_4:0 "has spread Revolutionary Ideas to some of our provinces:"
+ REVOLUTION_SPREAD_5:0 "$DESC$"
+ REVOLUTION_SPREAD_6:0 "$HINT$"
+ REVOLUTION_SPREAD_LOG:0 "Revolutionary ideas have spread to our provinces."
+ REVOLUTION_SPREAD_BTN2:0 "Ok"
+ REVOLUTION_SPREAD_BTN3:0 "Go to"
+ REVOLUTION_SPREAD_ZEAL_TITLE:0 "Revolutionary Ideas Spread"
+ REVOLUTION_SPREAD_ZEAL_SETUP:0 "When we spread revolutionary ideas to our ennemies."
+ REVOLUTION_SPREAD_ZEAL_HEADER:0 "$MESSENGER$"
+ REVOLUTION_SPREAD_ZEAL_1:0 "Revolutionary Ideas Spread"
+ REVOLUTION_SPREAD_ZEAL_2:0 "$MONARCHTITLE$, the Center of Revolution in"
+ REVOLUTION_SPREAD_ZEAL_3:0 "$REVCENTER$"
+ REVOLUTION_SPREAD_ZEAL_4:0 "has spread Revolutionary Ideas to ennemy provinces:"
+ REVOLUTION_SPREAD_ZEAL_5:0 "$PROVINCES$"
+ REVOLUTION_SPREAD_ZEAL_6:0 "We have have gained $ZEAL$ Revolutionary Zeal."
+ REVOLUTION_SPREAD_ZEAL_LOG:0 "Revolutionary ideas have spread to ennemy' provinces."
+ REVOLUTION_SPREAD_ZEAL_BTN2:0 "Ok"
+ REVOLUTION_SPREAD_ZEAL_BTN3:0 "Go to"
+ WEGAINDOFTIER_TITLE:0 "Rise to higher Defender of the Faith Tier"
+ WEGAINDOFTIER_SETUP:0 "When we rise to a higher Defender of the Faith Tier."
+ WEGAINDOFTIER_HEADER:0 "$MESSENGER$"
+ WEGAINDOFTIER_1:0 "Increased Influence in the $RELIGION$ Faith"
+ WEGAINDOFTIER_2:0 "Other brethren joined under our banner for the True Faith. Our influence as the Defender of the Faith is significantly increased."
+ WEGAINDOFTIER_3:0 "$EFFECT$"
+ WEGAINDOFTIER_LOG:0 "We rose to a higher Defender of the Faith Tier."
+ WEGAINDOFTIER_BTN1:0 "OK"
+ WEGAINDOFTIER_BTN2:0 "OK"
+ WEGAINDOFTIER_BTN3:0 "Go to"
+ WELOSEDOFTIER_TITLE:0 "Dropped out of Defender of the Faith Tier"
+ WELOSEDOFTIER_SETUP:0 "When we drop out of our current Defender of the Faith Tier."
+ WELOSEDOFTIER_HEADER:0 "$MESSENGER$"
+ WELOSEDOFTIER_1:0 "Decline in influence in the $RELIGION$ Faith"
+ WELOSEDOFTIER_2:0 "After losing the religious grip on one more country, our influence as Defender of the Faith is significantly reduced."
+ WELOSEDOFTIER_3:0 "$EFFECT$"
+ WELOSEDOFTIER_LOG:0 "We dropped out of our current Defender of the Faith Tier."
+ WELOSEDOFTIER_BTN1:0 "OK"
+ WELOSEDOFTIER_BTN2:0 "OK"
+ WELOSEDOFTIER_BTN3:0 "Go to"
