--- a/source/localisation/notlocalized_l_english.yml
+++ b/source/localisation/notlocalized_l_english.yml
@@ -2,5 +2,5 @@
  TESTX:0 "テスト"
  COMBATEND_UNIT_GAINED:0 "$NUM|Y$獲得"
  TO_OUR_OVERLORD:0 "宗主国へ：$VALUE|2R$"
- NO_OVERLORD:0 "宗主国を持っていません。"
+ NO_OVERLORD:1 "We don't have an Overlord."
  NO_OVERLORD_T:0 "我々は植民地国家ではありません。"
