--- a/source/localisation/opinions_l_english.yml
+++ b/source/localisation/opinions_l_english.yml
@@ -54,7 +54,7 @@
  spa_supported_rebels:0 "反乱軍を支援した"
  claimed_italy:0 "イタリアを主張した"
  fightinginside_realm:0 "領内の違法な戦争"
- catholic_obstructing_church:0 "教会の活動を妨害"
+ catholic_obstructing_church:1 "Refused to pay Indulgences"
  opinion_irritated:0 "苛立たせた"
  opinion_gossip:0 "噂"
  opinion_daimyo_gift:0 "貴重な贈り物"
