--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- personality_options.710.a:0 "我等の代官に歯向かう者は誰であれ打ち倒せ。"
+ personality_options.710.a:1 "Strike down any who would oppose our [Root.GetLowLevelOfficialForCountry]."
  personality_options.711.a:0 "我々は互いに許しあって生きていくことを学ぶ必要がある。"
  personality_options.714.a:0 "双方の学派の最良の面を組み合わせるよう試みる。"
  personality_options.714.b:0 "[Root.Monarch.GetTitle]は攻撃を好む。"
@@ -50,7 +50,7 @@
  personality_options.865.a:0 "我々の[Root.Monarch.GetTitle]は聖人であるも同然だ。"
  personality_options.866.a:0 "少しだけ？あなたはできるだけ多くのものを得るだろう。"
  personality_options.867.a:0 "これは我々の最優先事項だ！"
- personality_options.872.a:0 "[Root.Owner.Capital.GetCapitalName]での生活が彼の最善の利益になることを彼に納得させる。"
+ personality_options.872.a:1 "Convince him that life in [Root.Capital.GetCapitalName] would be in his best interest."
  personality_options.881.a:0 "努力のためにより適切な船長を見つけるのを手伝う。"
  personality_options.883.a:0 "我々はルネサンスに完全に従うべきだ。"
  personality_options.884.a:0 "立法を通じて彼の影響力を削減。"
@@ -117,8 +117,8 @@
  personality_options.5083.a:0 "価格を再交渉する。"
  personality_options.5085.a:0 "それはさらに壮大であるべきだ！"
  personality_options.5085.b:0 "[Root.Monarch.GetName]に個人的に事業を監督させよう。"
- personality_options.5086.a:0 "彼は実際にいくつかの興味深いアイデアを持っている！"
- personality_options.5088.a:0 "この機会を隣人たちとの和解に利用する。"
+ personality_options.5086.a:0 "[Root.Adm_Advisor.GetSheHeCap]'s got some interesting ideas actually!"
+ personality_options.5088.a:0 "Use this opportunity to reconcile with our neighbors."
  personality_options.5092.a:0 "この機会を外国の交易商への課税に利用する。"
  personality_options.5097.a:0 "仲介を試みる。"
  personality_options.5098.a:0 "国家が利益を得られ続ける限り。"
@@ -143,7 +143,7 @@
  personality_events.1.b:0 "支配者たるもの、神と人の法を理解していなければならない。"
  personality_events.1.c:0 "そのようなことで、[Root.Monarch.GetHerHis]の時間と金を無駄にしてはならぬ。"
  personality_events.2.t:0 "地図製作法の進歩"
- personality_events.2.d:0 "[Root.Monarch.GetHerHim]を取り巻く世界の熱心な研究家である[Root.Monarch.GetName]は地図にこだわるにようになった。[Root.Monarch.GetHerHisCap]にある[Root.Owner.Capital.GetCapitalName]の宮殿には[Root.Monarch.GetHerHis]の地図を所蔵するための専用の部屋があり、高貴なる[Root.Monarch.GetTitle]はそれらを眺め、分類することにかなりの時間を費やしている。\n[Root.Monarch.GetHerHis]の家臣たち（及び王室の会計官）の目には、[Root.Monarch.GetHerHim]が奇妙に映るようになったが、[Root.Monarch.GetSheHe]が蓄積した我らを取り巻く世界についての多大な記録により、我が国は恩恵を受けている。"
+ personality_events.2.d:0 "A devoted student of the world around [Root.Monarch.GetHerHim] [Root.Monarch.GetName] has come to be obsessed with maps. [Root.Monarch.GetHerHisCap] palace in [Root.Owner.Capital.GetCapitalName] has rooms entirely devoted to [Root.Monarch.GetHerHis] map collection and our dear [Root.Monarch.GetTitle] is spending quite some time staring at them and cataloging them.\nWhile this has made [Root.Monarch.GetHerHim] a bit odd in the eyes of [Root.Monarch.GetHerHis] courtiers (and the royal treasurer) our country is benefiting from the great archive [Root.Monarch.GetSheHe] has built up about the world around us."
  personality_events.2.a:0 "世界はこれほどまでに広いのか。"
  personality_events.3.t:0 "銃整備士の進歩"
  personality_events.3.d:0 "[Root.Monarch.GetName]は、銃の機能と形態に大きな関心を持っている。珍しいまたは革新的な銃器を追跡するためにかなりの努力が費やされており、[Root.Monarch.GetName]は[Root.Monarch.GetHerHim]の元に持ち込まれた武器を喜んで分解し再構築する。\nいくつかの人はこれを魅惑された病気のようなもの（金がかかることは言うまでもなく）だと考えているが、長く継続した事業の結果、[Root.Monarch.GetTitle]は[Root.Monarch.GetSheHe]が完璧な銃器だと主張するものを作り上げた。"
@@ -179,7 +179,7 @@
  personality_events.10.b:0 "我々はこの状況を利用すべきだ！"
  personality_events.10.b.tt:0 "この§Y地域§!に所有する州はすべて、まだ最小でなければ自治率がただちに§G15§!減少し、自治率減少§G-0.05§!の効果を30年間受ける。"
  increasing_local_authority:0 "地方の権威の増加"
- desc_increasing_local_authority:0 "我々は地方の有力者を粉砕し、追随者を奪ったことで、この地域に対する権威を急速に拡大している。"
+ desc_increasing_local_authority:0 "We are rapidly expanding our authority over this area after having crushed local power holders, stealing their clients."
  just_settlement_modifier:0 "紛争は解決した"
  desc_just_settlement_modifier:0 "我々は、我が国の一つの州で地元の紛争を正当に解決し、我が国のあらゆる階級に強い印象を与えている。"
  personality_events.11.t:0 "正義の[Root.Monarch.GetTitle]"
@@ -221,7 +221,7 @@
  not_so_kind_hearted:0 "迅速な抑圧作戦"
  desc_not_so_kind_hearted:0 "地元の社会の回復を促すのではなく、我々はこの地域におけるあらゆる形態の分離主義を激しく抑圧している。"
  personality_events.15.t:0 "異端の指導者？"
- personality_events.15.d:0 "奇妙な人物が、我々の王国の周辺の様々な田園地帯で目撃されている。彼は、その陽気なおしゃべりに耳を傾ける者には、世界創造の最も非正統的な解釈を説法している。ある人によると、彼は危険で下劣な聖書の再解釈を述べており、我々の国民の内僅かを除いてこの異端信仰に騙されたようだ。むしろ多くの人がこの預言者と彼の思想を好んでいるようである。\n[Root.Monarch.GetName]の自由思想を持つ[Root.Monarch.GetWomanMan]としての評判に興味をそそられ、預言者は現在、[Root.Monarch.GetName]との謁見を要求し、精神的な問題における顧問となることを提案している。"
+ personality_events.15.d:0 "A strange man has been spotted in the countryside at various locations around our realm. He is teaching a most unorthodox version of the creation of the world to whoever will listen to his jovial ramblings. According to some he represents a dangerous and vile reinterpretation of holy scriptures but few of our subjects seem to have been taken in by the heresy. Rather many seem fond of this would-be prophet and his ideas.\nIntrigued by the reputation of [Root.Monarch.GetName] as a free thinking [Root.Monarch.GetWomanMan] the prophet is now demanding an audience with [Root.Monarch.GetName], offering to act as an advisor in spiritual matters."
  personality_events.15.a:0 "虫食いのあるチーズのような世界？魅力的な視点だな！"
  personality_events.15.a.tt:0 "自由思想家として、あなたの支配者はこの人と会話することで多くの利益を得るかもしれないし、あるいは彼の考えは実際には価値がないかもしれません。世論は厳しいでしょう。"
  personality_events.15.b:0 "彼が我々の信仰を嘲笑うことを許すことはできない！"
@@ -451,7 +451,7 @@
  personality_events.57.t:0 "軍隊の招集"
  personality_events.57.d:0 "[Root.Monarch.GetName]という名前は、[Root.GovernmentName]の境界をはるかに越えて知られている。彼女は我々の崇高な[Root.Monarch.GetTitle]であるだけでなく、彼女の武勇でも有名である。今まで彼女は作戦室で安全に貢献してきたが、戦場で彼女の存在を求める声がある。それらは日が過ぎるごとに強くなるだけでなく、数も増している。"
  personality_events.57.a:0 "我らは墓まで彼女に付き従う！"
- personality_events.57.a.tooltip:0 "§Y[Root.Monarch.GetName]§!は将軍になります。"
+ personality_events.57.a.tooltip:1 "§Y[Root.Monarch.GetTitle] [Root.Monarch.GetName]§! is made general."
  personality_events.57.b:0 "我々は[Root.Monarch.GetTitle]の命を危険に晒すことはできない。"
  personality_events.57.b.tooltip:0 "§Y[Root.Monarch.GetTitle][Root.Monarch.GetName]§!は将軍にはなりません。"
  personality_events.58.t:0 "軍隊の招集"
