--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -44,7 +44,7 @@
  INSTITUTION_ENABLED:0 "$WHICH|Y$が発見されている。\n"
  NOT_INSTITUTION_ORIGIN:0 "$WHICH|Y$の発祥地ではない。\n"
  INSTITUTION_ORIGIN:0 "$WHICH|Y$の発祥地である。"
- ADD_INSTITUTION_EMBRACEMENT_EFFECT:0 "$WHICH|Y$への支援$VALUE$を$DIRECTION$。\n"
+ ADD_INSTITUTION_EMBRACEMENT_EFFECT:0 "$PROV$ $DIRECTION$ $VALUE$ support for $WHICH|Y$.\n"
  HAS_MERCHANT_TRIGGER:1 "$WHO|Y$の商人が$WHERE|Y$にいる。\n"
  HAS_NOT_MERCHANT_TRIGGER:0 "$WHO|Y$の商人が$WHERE|Y$にいない。\n"
  HAS_NOT_DISASTER:0 "$NAME|Y$にない。\n"
@@ -65,8 +65,8 @@
  HAVE_NO_LIGHT_SHIP_IN:0 "$COUNTRY$が$PROVINCE$に小型船を配置していない。"
  HAVE_GALLEYS_IN:0 "$COUNTRY$が$PROVINCE$にガレー船を配置している。"
  HAVE_NO_GALLEYS_IN:0 "$COUNTRY$が$PROVINCE$にガレー船を配置していない。"
- HAVE_TRANSPORTS_IN:0 "$COUNTRY$が$PROVINCE$に輸送船を配置している。"
- HAVE_NO_TRANSPORTS_IN:0 "$COUNTRY$が$PROVINCE$に輸送船を配置していない。"
+ HAVE_TRANSPORTS_IN:0 "$COUNTRY$ have transport ships in $PROVINCE$."
+ HAVE_NO_TRANSPORTS_IN:0 "$COUNTRY$ have NO transport ships in $PROVINCE$."
  ADD_CORE_CONSTRUCTION_EFFECT:0 "§Y$COST$%§!のコストと§Y$SPEED$%§!の期間をかけ、中核州の構築を開始します。\n"
  ADD_BUILDING_CONSTRUCTION_EFFECT:0 "§Y$COST$%§!のコストと§Y$SPEED$%§!の期間をかけ、§Y$BUILDING$§!の建造を開始します。\n"
  ADD_CULTURE_CONSTRUCTION_EFFECT:0 "§Y$COST$%§!のコストと§Y$SPEED$%§!の期間をかけ、文化の転向を開始します。\n"
@@ -161,13 +161,13 @@
  NATION_DESIGNER_TECH_GROUP_COST:0 "以下の条件により$COST|Y$のポイントコスト：\n"
  REFORM_DESIRE_IS_LESS_THAN:0 "改革欲求が§Y$SIZE$§!未満である。\n"
  REFORM_DESIRE_IS_AT_LEAST:0 "改革欲求が§Y$SIZE$§!以上である。\n"
- REFORM_DESIRE_EFFECT:0 "カトリックは$PERC$の改革欲求を$DIRECTION$。\n"
+ REFORM_DESIRE_EFFECT:1 "Catholicism $DIRECTION$ $PERC|%-$ Reform Desire.\n"
  RELIG_ATTACK:0 "宗教の敵への攻撃"
  GOV_ATTACK:0 "異なる政体への攻撃"
- HAS_NOT_IDEA_ALLOWING:0 "「§WHICH§!」が可能なアイデアを取得していない。\n"
- HAS_IDEA_ALLOWING:0 "「§WHICH§!」が可能なアイデアを取得している。\n"
- OPPOSE_NEXT_REFORM:0 "次の改革に反対する。"
- WANTS_NEXT_REFORM:0 "次の改革を要望する。"
+ HAS_NOT_IDEA_ALLOWING:1 "Do NOT have idea allowing '$WHICH$'.\n"
+ HAS_IDEA_ALLOWING:1 "Has idea allowing '$WHICH$'.\n"
+ OPPOSE_NEXT_REFORM:1 "Opposes all of the available reforms."
+ WANTS_NEXT_REFORM:1 "Wants at least one of the available reforms."
  HAVE_LESS_THAN_ADM_POWER:0 "統治力が右記未満："
  HAVE_MORE_THAN_ADM_POWER:0 "統治力が右記以上："
  HAVE_LESS_THAN_DIP_POWER:0 "外交力が右記未満："
@@ -185,7 +185,7 @@
  HASNT_3_STAR_TR:0 "三つ星の司令官が指揮していない"
  HAS_3_STAR_TR:0 "指揮している三つ星の将軍または提督がいる"
  HAS_UNIFIED_CUL:0 "$WHICH|Y$の州をすべて統治している"
- HASNT_UNIFIED_CULTUREGR:0 "統一された文化グループを持っていない"
+ HASNT_UNIFIED_CULTUREGR:0 "Has not unified the culture group"
  IS_VARIABLE_EQUAL:0 "$VAR|Y$が$VALUE|Y$と等しい"
  NOT_IS_VARIABLE_EQUAL:0 "$VAR|Y$が$VALUE|Y$と等しくない"
  IS_NOT_MARCH:0 "辺境伯ではない"
@@ -281,8 +281,8 @@
  DYNASTY_CHANGE:0 "$WHO$が$NEW$になります\n"
  IS_NOT_STRONGEST_TRADE_POWER:0 "§Y$WHO$§Wの交易力がその地域で最も強い交易力ではない。"
  HAS_NOT_MORE_TRADE_POWER:0 "$WHO|Y$の交易力が$VAL$%未満である。"
- HAS_NOT_MORE_PRIVATEERS:0 "$WHO|Y$の私掠海賊がその地域で持つ交易力が$VAL$%未満である。"
- HAS_SAME_OR_MORE_PRIVATEERS:0 "$WHO|Y$の私掠海賊がその地域で持つ交易力が$VAL$%以上である。"
+ HAS_NOT_MORE_PRIVATEERS:0 "$WHO|Y$ privateers have less than §Y$VAL$%§! of the trade power."
+ HAS_SAME_OR_MORE_PRIVATEERS:0 "$WHO|Y$ privateers have at least §Y$VAL$%§! trade power."
  HAS_PRIVATEERS_IN_ANY_NODE:0 "$WHO|Y$は私掠海賊をいずれかのノードに持っている。"
  HAS_NOT_PRIVATEERS_IN_ANY_NODE:0 "$WHO|Y$は私掠海賊をどのノードにも持っていない。"
  HAS_ACTIVE_FERVOR:0 "$WHO|Y$が宗教的情熱の効果を発動している。"
@@ -507,8 +507,8 @@
  CELESTIAL_REFORM_LEVEL_NOT:0 "$REFORMNAME|Y$が制定されていない。"
  CELESTIAL_REFORM_LEVEL:0 "$REFORMNAME|Y$が制定されている。"
  SET_CELESTIAL_EMPEROR_DESC:0 "$COUNTRYNAME$が中華皇帝になります。\n"
- DISMANTLE_CELESTIAL_EMPIRE_DESC:0 "中華帝国が解体されます。\n"
- REFORM_CELESTIAL_EMPIRE_DESC:0 "中華帝国が再建されます。\n"
+ DISMANTLE_CELESTIAL_EMPIRE_DESC:0 "The Empire of China is dismantled.\n"
+ REFORM_CELESTIAL_EMPIRE_DESC:0 "The Empire of China is re-formed.\n"
  ADD_MANDATE_DESC:0 "天命$MANDATECHANGE|Y$を$DIRECTION$。\n"
  SET_MANDATE_DESC:0 "天命が$MANDATEVALUE|Y$になります。\n"
  IS_SUBJECT_TYPE:0 "$SUBJECTTYPE$である。\n"
@@ -590,8 +590,6 @@
  HAVE_LESS_THAN_N_REGIMENTS_AT_FULL_DRILL:1 "§Y$VALUE$§!未満の完全に訓練された連隊を持っている。\n"
  HAVE_MORE_THAN_N_REGIMENTS_AT_FULL_DRILL:1 "§Y$VALUE$§!以上の完全に訓練された連隊を持っている。\n"
  ANY_ARMY_STARTS:0 "いずれかの陸軍"
- HAVE_LESS_JANISSARIES_THAN_PERC:0 "陸軍の$PERC|%|Y$未満がイェニチェリ連隊である（$SHIPS|Y$）"
- HAVE_MORE_JANISSARIES_THAN_PERC:0 "陸軍の$PERC|%|Y$以上がイェニチェリ連隊である（$SHIPS|Y$）"
  HAVE_LESS_JANISSARIES_THAN:0 "$VALUE|Y$未満のイェニチェリ連隊を持っている。\n"
  HAVE_AT_LEAST_JANISSARIES_THAN:0 "$VALUE|Y$以上のイェニチェリ連隊を持っている。\n"
  SUPPLY_DEPOT_IN_PROVINCE:0 "州に補給拠点がある。\n"
@@ -601,7 +599,7 @@
  HAS_LATENT_TRADE_GOODS_SPECIFIC:0 "潜在的交易品として$NAME$を持っている。"
  HAS_NOT_LATENT_TRADE_GOODS_ANY:0 "潜在的交易品を持っていない。"
  HAS_LATENT_TRADE_GOODS_ANY:0 "潜在的交易品を持っている。"
- EFFECT_REMOVE_LATENT_GOODS:0 "$GOODS|Y$が$PROVINCE|Y$の潜在的な商品から削除されます。"
+ EFFECT_REMOVE_LATENT_GOODS:0 "$GOODS|Y$ is removed as latent goods of $PROVINCE|Y$."
  EFFECT_REMOVE_ALL_LATENT_GOODS:0 "$PROVINCE|Y$のすべての潜在的交易品が削除されます。"
  INNOVATIVENESS_IS_LESS_THAN:0 "革新性が§Y$SIZE$§!未満である。\n"
  INNOVATIVENESS_IS_AT_LEAST:0 "革新性が§Y$SIZE$§!以上である。\n"
@@ -616,7 +614,7 @@
  RAISE_WAR_TAXES_EFFECT:0 "£mil を消費せず$DURATION|Y$年間、戦争税を徴収します。\n"
  TAKE_LOAN_EFFECT:0 "銀行から$DURATION|Y$ヶ月分の融資を"
  INTEREST_MODIFIER_DESC:0 "$VAL$$DIR$利息で受けます。"
- FIXED_INTEREST_DESC:0 "この借金の利息は固定されています。"
+ FIXED_INTEREST_DESC:1 " The interest on this loan is fixed to $RATE|Y$."
  LOWER:0 "下げる"
  HIGHER:0 "上げる"
  WITH_GOVERNMENT_TYPE:0 "彼らが形成する国家は$GOV|Y$政体を持ちます。"
@@ -642,3 +640,32 @@
  OWNS_ALL_PROVINCES:0 "州を全て領有する:\n"
  HAS_NON_GENERIC_MISSIONS:0 "$COUNTRY|Y$には独自ミッションがあります。\n"
  HAS_NOT_NON_GENERIC_MISSIONS:0 "$COUNTRY|Y$には独自ミッションがありません。\n"
+ TRENT_IS_NOT_ENABLED:0 "Council of Trent has not happened."
+ TRENT_IS_ENABLED:1 "Council of Trent has Started."
+ ENABLE_COUNCIL_OF_TRENT:0 "Starts the §YCouncil of Trent§!\n"
+ DISABLE_COUNCIL_OF_TRENT:0 "Ends the §YCouncil of Trent§!\n"
+ HAVE_LESS_OWNED_AREAS_THAN:0 "Have less areas than $VALUE|Y$"
+ HAVE_MORE_OWNED_AREAS_THAN:0 "Number of areas at least $VALUE|Y$"
+ HAS_NOT_FEATURE_ALLOWING:1 "Do NOT have feature allowing '$WHICH$'.\n"
+ HAS_FEATURE_ALLOWING:1 "Has feature allowing '$WHICH$'.\n"
+ TOTAL_HAS_NOT_MORE_PRIVATEERS:0 "Total privateers in $WHERE|Y$ is less than §Y$VAL$%§! of the trade power."
+ TOTAL_HAS_SAME_OR_MORE_PRIVATEERS:0 "Total privateers in $WHERE|Y$ is at least §Y$VAL$%§! of the trade power."
+ HAVE_LESS_REGIMENT_TYPE_THAN_PERC:2 "Less than $PERC|%Y$ of the army are $TYPE$ Regiments ($NUM|Y$)"
+ HAVE_MORE_REGIMENT_TYPE_THAN_PERC:2 "More than $PERC|%Y$ of the army are $TYPE$ Regiments ($NUM|Y$)"
+ NORMAL_REGIMENT_TYPE:0 "normal"
+ MERCENARY_REGIMENT_TYPE:0 "Mercenary"
+ BANNER_REGIMENT_TYPE:0 "Banner"
+ STRELTSY_REGIMENT_TYPE:0 "Streltsy"
+ COSSACKS_REGIMENT_TYPE:0 "Cossack"
+ JANISSARIES_REGIMENT_TYPE:0 "Janissary"
+ RAJPUT_REGIMENT_TYPE:0 "Rajput"
+ ESTATE_LOAN_DESC:0 " An Estate of yours provides this loan."
+ IS_REBEL_TYPE_TRIGGER:0 "Is $TYPE|Y$ rebels.\n"
+ IS_NOT_REBEL_TYPE_TRIGGER:0 "Is not $TYPE|Y$ rebels.\n"
+ EFFECT_GAIN_POWER_PROJECTION:0 "$TAG|Y$ will gain $AMOUNT|G$ power projection."
+ EFFECT_LOSE_POWER_PROJECTION:0 "$TAG|Y$ will lose $AMOUNT|R$ power projection."
+ EFFECT_SUPPORT_INDEPENDENCE:0 "$TAG|Y$ will support the independence of $TARGET|Y$."
+ TRIGGER_WAS_HUMILIATED_BY:0 "$TAG|Y$ was recently humiliated by $BY|Y$."
+ TRIGGER_WAS_NOT_HUMILIATED_BY:0 "$TAG|Y$ was not recently humiliated by $BY|Y$."
+ TRIGGER_IS_HIRING_CONDOTTIERE_FROM:0 "$TAG|Y$ is hiring condottiere from $FROM|Y$."
+ TRIGGER_IS_NOT_HIRING_CONDOTTIERE_FROM:0 "$TAG|Y$ is not hiring condottiere from $FROM|Y$."
